1.13/README.md
### 1.13, 113_
- Started: `2022-09-03T12:07:45.551Z`
- Username: `113_`

| Packet Normalized | Packet Name | Time |
|---|---|---|
| Compress | compress | 397.0ms
| Success | success | 403.0ms
| CustomPayload | custom_payload | 717.0ms
| CustomPayload | custom_payload | 719.0ms
| Login | login | 723.0ms
| CustomPayload | custom_payload | 725.0ms
| Difficulty | difficulty | 727.0ms
| Abilities | abilities | 730.0ms
| HeldItemSlot | held_item_slot | 733.0ms
| DeclareRecipes | declare_recipes | 1193.0ms
| Tags | tags | 1295.0ms
| EntityStatus | entity_status | 1298.0ms
| Position | position | 1302.0ms
| Chat | chat | 1345.0ms
| PlayerInfo | player_info | 1349.0ms
| PlayerInfo | player_info | 1351.0ms
| PlayerInfo | player_info | 1354.0ms
| PlayerInfo | player_info | 1356.0ms
| PlayerInfo | player_info | 1359.0ms
| PlayerInfo | player_info | 1361.0ms
| PlayerInfo | player_info | 1366.0ms
| NamedEntitySpawn | named_entity_spawn | 1370.0ms
| EntityMetadata | entity_metadata | 1373.0ms
| EntityUpdateAttributes | entity_update_attributes | 1377.0ms
| NamedEntitySpawn | named_entity_spawn | 1380.0ms
| EntityMetadata | entity_metadata | 1383.0ms
| EntityUpdateAttributes | entity_update_attributes | 1386.0ms
| SpawnEntityLiving | spawn_entity_living | 1389.0ms
| EntityMetadata | entity_metadata | 1393.0ms
| EntityUpdateAttributes | entity_update_attributes | 1396.0ms
| NamedEntitySpawn | named_entity_spawn | 1399.0ms
| EntityMetadata | entity_metadata | 1403.0ms
| EntityUpdateAttributes | entity_update_attributes | 1406.0ms
| NamedEntitySpawn | named_entity_spawn | 1410.0ms
| EntityMetadata | entity_metadata | 1414.0ms
| EntityUpdateAttributes | entity_update_attributes | 1417.0ms
| NamedEntitySpawn | named_entity_spawn | 1421.0ms
| EntityMetadata | entity_metadata | 1424.0ms
| EntityUpdateAttributes | entity_update_attributes | 1428.0ms
| SpawnEntity | spawn_entity | 1432.0ms
| EntityMetadata | entity_metadata | 1436.0ms
| EntityMetadata | entity_metadata | 1441.0ms
| WorldBorder | world_border | 1445.0ms
| SpawnPosition | spawn_position | 1451.0ms
| WindowItems | window_items | 1457.0ms
| SetSlot | set_slot | 1460.0ms
| Transaction | transaction | 1463.0ms
| UpdateHealth | update_health | 1466.0ms
| Experience | experience | 1469.0ms
| EntityUpdateAttributes | entity_update_attributes | 1483.0ms
| Advancements | advancements | 1488.0ms
| DeclareCommands | declare_commands | 1508.0ms
| NamedSoundEffect | named_sound_effect | 1515.0ms
| NamedSoundEffect | named_sound_effect | 1521.0ms
| PlayerInfo | player_info | 1528.0ms
| NamedSoundEffect | named_sound_effect | 1543.0ms
| NamedSoundEffect | named_sound_effect | 1550.0ms
| NamedSoundEffect | named_sound_effect | 1552.0ms
| NamedSoundEffect | named_sound_effect | 1557.0ms
| NamedSoundEffect | named_sound_effect | 1746.0ms
| NamedSoundEffect | named_sound_effect | 1943.0ms
| NamedSoundEffect | named_sound_effect | 2025.0ms
| NamedSoundEffect | named_sound_effect | 2119.0ms
| EntityLook | entity_look | 2146.0ms
| NamedSoundEffect | named_sound_effect | 2172.0ms
| NamedSoundEffect | named_sound_effect | 2196.0ms
| NamedSoundEffect | named_sound_effect | 2210.0ms
| NamedSoundEffect | named_sound_effect | 2213.0ms
| NamedSoundEffect | named_sound_effect | 2308.0ms
| NamedSoundEffect | named_sound_effect | 2408.0ms
| NamedSoundEffect | named_sound_effect | 2412.0ms
| NamedSoundEffect | named_sound_effect | 2755.0ms
| NamedSoundEffect | named_sound_effect | 2887.0ms
| NamedSoundEffect | named_sound_effect | 2890.0ms
| NamedSoundEffect | named_sound_effect | 2954.0ms
| NamedSoundEffect | named_sound_effect | 3048.0ms
| NamedSoundEffect | named_sound_effect | 3258.0ms
| NamedSoundEffect | named_sound_effect | 3262.0ms
| NamedSoundEffect | named_sound_effect | 3307.0ms
| NamedSoundEffect | named_sound_effect | 3601.0ms
| NamedSoundEffect | named_sound_effect | 3701.0ms
| NamedSoundEffect | named_sound_effect | 3751.0ms
| NamedSoundEffect | named_sound_effect | 3900.0ms
| NamedSoundEffect | named_sound_effect | 4149.0ms
| NamedSoundEffect | named_sound_effect | 4195.0ms
| NamedSoundEffect | named_sound_effect | 4197.0ms
| NamedSoundEffect | named_sound_effect | 4276.0ms
| NamedSoundEffect | named_sound_effect | 4606.0ms
| NamedSoundEffect | named_sound_effect | 4662.0ms
| NamedSoundEffect | named_sound_effect | 4669.0ms
| EntityTeleport | entity_teleport | 4748.0ms
| NamedSoundEffect | named_sound_effect | 4900.0ms
| NamedSoundEffect | named_sound_effect | 5117.0ms
| NamedSoundEffect | named_sound_effect | 5121.0ms
| EntityLook | entity_look | 5192.0ms
| NamedSoundEffect | named_sound_effect | 5253.0ms
| NamedSoundEffect | named_sound_effect | 5255.0ms
| PlayerInfo | player_info | 5697.0ms
| Chat | chat | 5958.0ms
| PlayerInfo | player_info | 5961.0ms
| NamedEntitySpawn | named_entity_spawn | 5964.0ms
| EntityMetadata | entity_metadata | 5967.0ms
| EntityUpdateAttributes | entity_update_attributes | 5969.0ms
| EntityTeleport | entity_teleport | 5972.0ms
| EntityUpdateAttributes | entity_update_attributes | 5975.0ms
| NamedSoundEffect | named_sound_effect | 5977.0ms
| NamedSoundEffect | named_sound_effect | 5980.0ms
| NamedSoundEffect | named_sound_effect | 5982.0ms
| EntityTeleport | entity_teleport | 5984.0ms
| NamedSoundEffect | named_sound_effect | 6029.0ms
| NamedSoundEffect | named_sound_effect | 6032.0ms
| NamedSoundEffect | named_sound_effect | 6037.0ms
| NamedSoundEffect | named_sound_effect | 6118.0ms
| NamedSoundEffect | named_sound_effect | 6219.0ms
| NamedSoundEffect | named_sound_effect | 6236.0ms
| NamedSoundEffect | named_sound_effect | 6267.0ms
| NamedSoundEffect | named_sound_effect | 6269.0ms
| NamedSoundEffect | named_sound_effect | 6453.0ms
| NamedSoundEffect | named_sound_effect | 6568.0ms
| NamedSoundEffect | named_sound_effect | 6572.0ms
| NamedSoundEffect | named_sound_effect | 6670.0ms
| NamedSoundEffect | named_sound_effect | 6866.0ms
| NamedSoundEffect | named_sound_effect | 6910.0ms
| NamedSoundEffect | named_sound_effect | 7031.0ms
| NamedSoundEffect | named_sound_effect | 7108.0ms
| NamedSoundEffect | named_sound_effect | 7152.0ms
| NamedSoundEffect | named_sound_effect | 7154.0ms
| NamedSoundEffect | named_sound_effect | 7168.0ms
| NamedSoundEffect | named_sound_effect | 7204.0ms
| NamedSoundEffect | named_sound_effect | 7420.0ms
| NamedSoundEffect | named_sound_effect | 7509.0ms
| EntityTeleport | entity_teleport | 7565.0ms
| NamedSoundEffect | named_sound_effect | 7595.0ms
| NamedSoundEffect | named_sound_effect | 7674.0ms
| NamedSoundEffect | named_sound_effect | 7737.0ms
| NamedSoundEffect | named_sound_effect | 7739.0ms
| NamedSoundEffect | named_sound_effect | 7742.0ms
| NamedSoundEffect | named_sound_effect | 7945.0ms
| NamedSoundEffect | named_sound_effect | 7998.0ms
| NamedSoundEffect | named_sound_effect | 8013.0ms
| NamedSoundEffect | named_sound_effect | 8016.0ms
| NamedSoundEffect | named_sound_effect | 8141.0ms
| NamedSoundEffect | named_sound_effect | 8252.0ms
| NamedSoundEffect | named_sound_effect | 8304.0ms
| NamedSoundEffect | named_sound_effect | 8400.0ms
| NamedSoundEffect | named_sound_effect | 8527.0ms
| NamedSoundEffect | named_sound_effect | 8565.0ms
| NamedSoundEffect | named_sound_effect | 8567.0ms
| NamedSoundEffect | named_sound_effect | 8652.0ms
| NamedSoundEffect | named_sound_effect | 8850.0ms
| NamedSoundEffect | named_sound_effect | 8906.0ms
| NamedSoundEffect | named_sound_effect | 8957.0ms
| NamedSoundEffect | named_sound_effect | 8995.0ms
| NamedSoundEffect | named_sound_effect | 9123.0ms
| NamedSoundEffect | named_sound_effect | 9221.0ms
| NamedSoundEffect | named_sound_effect | 9264.0ms
| NamedSoundEffect | named_sound_effect | 9381.0ms
| NamedSoundEffect | named_sound_effect | 9454.0ms
| NamedSoundEffect | named_sound_effect | 9457.0ms
| NamedSoundEffect | named_sound_effect | 9501.0ms
| NamedSoundEffect | named_sound_effect | 9696.0ms
| NamedSoundEffect | named_sound_effect | 9755.0ms
| NamedSoundEffect | named_sound_effect | 9800.0ms
| NamedSoundEffect | named_sound_effect | 9915.0ms
| NamedSoundEffect | named_sound_effect | 9997.0ms
| NamedSoundEffect | named_sound_effect | 10045.0ms
| NamedSoundEffect | named_sound_effect | 10048.0ms
| EntityTeleport | entity_teleport | 10099.0ms
| NamedSoundEffect | named_sound_effect | 10101.0ms
| NamedSoundEffect | named_sound_effect | 10338.0ms
| NamedSoundEffect | named_sound_effect | 10527.0ms
| NamedSoundEffect | named_sound_effect | 10530.0ms
| NamedSoundEffect | named_sound_effect | 10533.0ms
| NamedSoundEffect | named_sound_effect | 10618.0ms
| PlayerInfo | player_info | 10827.0ms
| Chat | chat | 10959.0ms
| PlayerInfo | player_info | 10962.0ms
| NamedEntitySpawn | named_entity_spawn | 10965.0ms
| EntityMetadata | entity_metadata | 10969.0ms
| EntityUpdateAttributes | entity_update_attributes | 10972.0ms
| EntityTeleport | entity_teleport | 11014.0ms
| EntityUpdateAttributes | entity_update_attributes | 11016.0ms
| NamedSoundEffect | named_sound_effect | 11018.0ms
| EntityTeleport | entity_teleport | 11034.0ms
| NamedSoundEffect | named_sound_effect | 11036.0ms
| NamedSoundEffect | named_sound_effect | 11382.0ms
| NamedSoundEffect | named_sound_effect | 11385.0ms
| NamedSoundEffect | named_sound_effect | 11388.0ms
| NamedSoundEffect | named_sound_effect | 11391.0ms
| NamedSoundEffect | named_sound_effect | 11394.0ms
| NamedSoundEffect | named_sound_effect | 11398.0ms
| NamedSoundEffect | named_sound_effect | 11402.0ms
| NamedSoundEffect | named_sound_effect | 11405.0ms
| NamedSoundEffect | named_sound_effect | 11408.0ms
| NamedSoundEffect | named_sound_effect | 11462.0ms
| NamedSoundEffect | named_sound_effect | 11496.0ms
| NamedSoundEffect | named_sound_effect | 11577.0ms
| NamedSoundEffect | named_sound_effect | 11581.0ms
| NamedSoundEffect | named_sound_effect | 11583.0ms
| NamedSoundEffect | named_sound_effect | 11699.0ms
| NamedSoundEffect | named_sound_effect | 11875.0ms
| NamedSoundEffect | named_sound_effect | 11880.0ms
| NamedSoundEffect | named_sound_effect | 11907.0ms
| NamedSoundEffect | named_sound_effect | 11950.0ms
| NamedSoundEffect | named_sound_effect | 12002.0ms
| NamedSoundEffect | named_sound_effect | 12132.0ms
| NamedSoundEffect | named_sound_effect | 12135.0ms
| NamedSoundEffect | named_sound_effect | 12395.0ms
| NamedSoundEffect | named_sound_effect | 12406.0ms
| NamedSoundEffect | named_sound_effect | 12427.0ms
| NamedSoundEffect | named_sound_effect | 12449.0ms
| NamedSoundEffect | named_sound_effect | 12453.0ms
| NamedSoundEffect | named_sound_effect | 12556.0ms
| NamedSoundEffect | named_sound_effect | 12647.0ms
| NamedSoundEffect | named_sound_effect | 12651.0ms
| NamedSoundEffect | named_sound_effect | 12677.0ms
| NamedSoundEffect | named_sound_effect | 12945.0ms
| NamedSoundEffect | named_sound_effect | 12973.0ms
| NamedSoundEffect | named_sound_effect | 12975.0ms
| NamedSoundEffect | named_sound_effect | 13019.0ms
| EntityLook | entity_look | 13021.0ms
| NamedSoundEffect | named_sound_effect | 13023.0ms
| NamedSoundEffect | named_sound_effect | 13028.0ms
| NamedSoundEffect | named_sound_effect | 13156.0ms
| NamedSoundEffect | named_sound_effect | 13335.0ms
| NamedSoundEffect | named_sound_effect | 13339.0ms
| NamedSoundEffect | named_sound_effect | 13398.0ms
| NamedSoundEffect | named_sound_effect | 13401.0ms
| NamedSoundEffect | named_sound_effect | 13404.0ms
| NamedSoundEffect | named_sound_effect | 13548.0ms
| NamedSoundEffect | named_sound_effect | 13660.0ms
| NamedSoundEffect | named_sound_effect | 13664.0ms
| NamedSoundEffect | named_sound_effect | 13666.0ms
| NamedSoundEffect | named_sound_effect | 13711.0ms
| NamedSoundEffect | named_sound_effect | 13757.0ms
| NamedSoundEffect | named_sound_effect | 13917.0ms
| NamedSoundEffect | named_sound_effect | 13970.0ms
| NamedSoundEffect | named_sound_effect | 13973.0ms
| NamedSoundEffect | named_sound_effect | 14045.0ms
| NamedSoundEffect | named_sound_effect | 14100.0ms
| NamedSoundEffect | named_sound_effect | 14192.0ms
| NamedSoundEffect | named_sound_effect | 14266.0ms
| NamedSoundEffect | named_sound_effect | 14290.0ms
| NamedSoundEffect | named_sound_effect | 14464.0ms
| NamedSoundEffect | named_sound_effect | 14466.0ms
| NamedSoundEffect | named_sound_effect | 14471.0ms
| NamedSoundEffect | named_sound_effect | 14561.0ms
| NamedSoundEffect | named_sound_effect | 14619.0ms
| NamedSoundEffect | named_sound_effect | 14644.0ms
| NamedSoundEffect | named_sound_effect | 14698.0ms
| NamedSoundEffect | named_sound_effect | 14799.0ms
| NamedSoundEffect | named_sound_effect | 14898.0ms
| NamedSoundEffect | named_sound_effect | 14901.0ms
| NamedSoundEffect | named_sound_effect | 15019.0ms
| NamedSoundEffect | named_sound_effect | 15023.0ms
| NamedSoundEffect | named_sound_effect | 15193.0ms
| NamedSoundEffect | named_sound_effect | 15248.0ms
| NamedSoundEffect | named_sound_effect | 15253.0ms
| NamedSoundEffect | named_sound_effect | 15310.0ms
| NamedSoundEffect | named_sound_effect | 15312.0ms
| EntityTeleport | entity_teleport | 15347.0ms
| NamedSoundEffect | named_sound_effect | 15460.0ms
| EntityLook | entity_look | 15584.0ms
| NamedSoundEffect | named_sound_effect | 15586.0ms
| KeepAlive | keep_alive | 15589.0ms
| NamedSoundEffect | named_sound_effect | 15597.0ms
| NamedSoundEffect | named_sound_effect | 15638.0ms
| NamedSoundEffect | named_sound_effect | 15691.0ms
| PlayerInfo | player_info | 15942.0ms
| NamedSoundEffect | named_sound_effect | 15944.0ms
| Chat | chat | 16168.0ms
| PlayerInfo | player_info | 16171.0ms
| NamedEntitySpawn | named_entity_spawn | 16173.0ms
| EntityMetadata | entity_metadata | 16177.0ms
| EntityUpdateAttributes | entity_update_attributes | 16179.0ms
| EntityTeleport | entity_teleport | 16182.0ms
| EntityUpdateAttributes | entity_update_attributes | 16185.0ms
| NamedSoundEffect | named_sound_effect | 16187.0ms
| EntityTeleport | entity_teleport | 16189.0ms
| NamedSoundEffect | named_sound_effect | 16342.0ms
| NamedSoundEffect | named_sound_effect | 16344.0ms
| NamedSoundEffect | named_sound_effect | 16348.0ms
| NamedSoundEffect | named_sound_effect | 16351.0ms
| NamedSoundEffect | named_sound_effect | 16354.0ms
| NamedSoundEffect | named_sound_effect | 16356.0ms
| NamedSoundEffect | named_sound_effect | 16358.0ms
| NamedSoundEffect | named_sound_effect | 16360.0ms
| NamedSoundEffect | named_sound_effect | 16365.0ms
| NamedSoundEffect | named_sound_effect | 16368.0ms
| NamedSoundEffect | named_sound_effect | 16370.0ms
| NamedSoundEffect | named_sound_effect | 16548.0ms
| NamedSoundEffect | named_sound_effect | 16550.0ms
| NamedSoundEffect | named_sound_effect | 16587.0ms
| NamedSoundEffect | named_sound_effect | 16589.0ms
| NamedSoundEffect | named_sound_effect | 16617.0ms
| NamedSoundEffect | named_sound_effect | 16673.0ms
| NamedSoundEffect | named_sound_effect | 16675.0ms
| NamedSoundEffect | named_sound_effect | 16695.0ms
| NamedSoundEffect | named_sound_effect | 16706.0ms
| NamedSoundEffect | named_sound_effect | 16763.0ms
| NamedSoundEffect | named_sound_effect | 16857.0ms
| NamedSoundEffect | named_sound_effect | 16912.0ms
| NamedSoundEffect | named_sound_effect | 16968.0ms
| NamedSoundEffect | named_sound_effect | 16971.0ms
| NamedSoundEffect | named_sound_effect | 17187.0ms
| NamedSoundEffect | named_sound_effect | 17191.0ms
| NamedSoundEffect | named_sound_effect | 17194.0ms
| NamedSoundEffect | named_sound_effect | 17197.0ms
| NamedSoundEffect | named_sound_effect | 17288.0ms
| NamedSoundEffect | named_sound_effect | 17293.0ms
| NamedSoundEffect | named_sound_effect | 17375.0ms
| NamedSoundEffect | named_sound_effect | 17432.0ms
| NamedSoundEffect | named_sound_effect | 17435.0ms
| NamedSoundEffect | named_sound_effect | 17437.0ms
| NamedSoundEffect | named_sound_effect | 17485.0ms
| NamedSoundEffect | named_sound_effect | 17500.0ms
| NamedSoundEffect | named_sound_effect | 17618.0ms
| NamedSoundEffect | named_sound_effect | 17742.0ms
| NamedSoundEffect | named_sound_effect | 17745.0ms
| NamedSoundEffect | named_sound_effect | 17749.0ms
| NamedSoundEffect | named_sound_effect | 17771.0ms
| NamedSoundEffect | named_sound_effect | 17841.0ms
| NamedSoundEffect | named_sound_effect | 17843.0ms
| NamedSoundEffect | named_sound_effect | 17900.0ms
| NamedSoundEffect | named_sound_effect | 17946.0ms
| NamedSoundEffect | named_sound_effect | 18001.0ms
| NamedSoundEffect | named_sound_effect | 18116.0ms
| NamedSoundEffect | named_sound_effect | 18119.0ms
| NamedSoundEffect | named_sound_effect | 18200.0ms
| NamedSoundEffect | named_sound_effect | 18249.0ms
| NamedSoundEffect | named_sound_effect | 18301.0ms
| NamedSoundEffect | named_sound_effect | 18303.0ms
| NamedSoundEffect | named_sound_effect | 18305.0ms
| NamedSoundEffect | named_sound_effect | 18331.0ms
| NamedSoundEffect | named_sound_effect | 18455.0ms
| NamedSoundEffect | named_sound_effect | 18501.0ms
| NamedSoundEffect | named_sound_effect | 18544.0ms
| NamedSoundEffect | named_sound_effect | 18589.0ms
| NamedSoundEffect | named_sound_effect | 18650.0ms
| NamedSoundEffect | named_sound_effect | 18710.0ms
| NamedSoundEffect | named_sound_effect | 18714.0ms
| NamedSoundEffect | named_sound_effect | 18746.0ms
| NamedSoundEffect | named_sound_effect | 18796.0ms
| NamedSoundEffect | named_sound_effect | 18853.0ms
| NamedSoundEffect | named_sound_effect | 18902.0ms
| NamedSoundEffect | named_sound_effect | 19093.0ms
| NamedSoundEffect | named_sound_effect | 19096.0ms
| NamedSoundEffect | named_sound_effect | 19099.0ms
| NamedSoundEffect | named_sound_effect | 19103.0ms
| NamedSoundEffect | named_sound_effect | 19106.0ms
| NamedSoundEffect | named_sound_effect | 19207.0ms
| NamedSoundEffect | named_sound_effect | 19209.0ms
| NamedSoundEffect | named_sound_effect | 19269.0ms
| NamedSoundEffect | named_sound_effect | 19296.0ms
| NamedSoundEffect | named_sound_effect | 19471.0ms
| NamedSoundEffect | named_sound_effect | 19516.0ms
| NamedSoundEffect | named_sound_effect | 19531.0ms
| NamedSoundEffect | named_sound_effect | 19535.0ms
| NamedSoundEffect | named_sound_effect | 19587.0ms
| NamedSoundEffect | named_sound_effect | 19589.0ms
| NamedSoundEffect | named_sound_effect | 19611.0ms
| NamedSoundEffect | named_sound_effect | 19775.0ms
| NamedSoundEffect | named_sound_effect | 19778.0ms
| NamedSoundEffect | named_sound_effect | 19872.0ms
| NamedSoundEffect | named_sound_effect | 19894.0ms
| NamedSoundEffect | named_sound_effect | 19948.0ms
| NamedSoundEffect | named_sound_effect | 19951.0ms
| NamedSoundEffect | named_sound_effect | 20006.0ms
| NamedSoundEffect | named_sound_effect | 20008.0ms
| NamedSoundEffect | named_sound_effect | 20011.0ms
| NamedSoundEffect | named_sound_effect | 20105.0ms
| NamedSoundEffect | named_sound_effect | 20259.0ms
| NamedSoundEffect | named_sound_effect | 20306.0ms
| NamedSoundEffect | named_sound_effect | 20308.0ms
| NamedSoundEffect | named_sound_effect | 20400.0ms
| NamedSoundEffect | named_sound_effect | 20402.0ms
| NamedSoundEffect | named_sound_effect | 20405.0ms
| NamedSoundEffect | named_sound_effect | 20475.0ms
| NamedSoundEffect | named_sound_effect | 20478.0ms
| NamedSoundEffect | named_sound_effect | 20683.0ms
| NamedSoundEffect | named_sound_effect | 20687.0ms
| NamedSoundEffect | named_sound_effect | 20796.0ms
| NamedSoundEffect | named_sound_effect | 20809.0ms
| EntityLook | entity_look | 20812.0ms
| NamedSoundEffect | named_sound_effect | 20908.0ms
| NamedSoundEffect | named_sound_effect | 20913.0ms
| NamedSoundEffect | named_sound_effect | 20916.0ms
| PlayerInfo | player_info | 21204.0ms
| NamedSoundEffect | named_sound_effect | 21208.0ms
| NamedSoundEffect | named_sound_effect | 21211.0ms
| Chat | chat | 21553.0ms
| PlayerInfo | player_info | 21556.0ms
| NamedEntitySpawn | named_entity_spawn | 21559.0ms
| EntityMetadata | entity_metadata | 21563.0ms
| EntityUpdateAttributes | entity_update_attributes | 21565.0ms
| EntityTeleport | entity_teleport | 21568.0ms
| EntityUpdateAttributes | entity_update_attributes | 21571.0ms
| NamedSoundEffect | named_sound_effect | 21574.0ms
| EntityTeleport | entity_teleport | 21577.0ms
| NamedSoundEffect | named_sound_effect | 21581.0ms
| NamedSoundEffect | named_sound_effect | 21583.0ms
| NamedSoundEffect | named_sound_effect | 21587.0ms
| NamedSoundEffect | named_sound_effect | 21591.0ms
| NamedSoundEffect | named_sound_effect | 21595.0ms
| NamedSoundEffect | named_sound_effect | 21598.0ms
| NamedSoundEffect | named_sound_effect | 21601.0ms
| NamedSoundEffect | named_sound_effect | 21604.0ms
| NamedSoundEffect | named_sound_effect | 21939.0ms
| NamedSoundEffect | named_sound_effect | 21941.0ms
| NamedSoundEffect | named_sound_effect | 21944.0ms
| NamedSoundEffect | named_sound_effect | 21947.0ms
| NamedSoundEffect | named_sound_effect | 21952.0ms
| NamedSoundEffect | named_sound_effect | 21954.0ms
| NamedSoundEffect | named_sound_effect | 21957.0ms
| NamedSoundEffect | named_sound_effect | 21959.0ms
| NamedSoundEffect | named_sound_effect | 21962.0ms
| NamedSoundEffect | named_sound_effect | 21965.0ms
| NamedSoundEffect | named_sound_effect | 21969.0ms
| NamedSoundEffect | named_sound_effect | 21973.0ms
| NamedSoundEffect | named_sound_effect | 21975.0ms
| NamedSoundEffect | named_sound_effect | 22449.0ms
| NamedSoundEffect | named_sound_effect | 22452.0ms
| NamedSoundEffect | named_sound_effect | 22455.0ms
| NamedSoundEffect | named_sound_effect | 22458.0ms
| NamedSoundEffect | named_sound_effect | 22461.0ms
| NamedSoundEffect | named_sound_effect | 22464.0ms
| NamedSoundEffect | named_sound_effect | 22469.0ms
| NamedSoundEffect | named_sound_effect | 22472.0ms
| NamedSoundEffect | named_sound_effect | 22474.0ms
| NamedSoundEffect | named_sound_effect | 22477.0ms
| NamedSoundEffect | named_sound_effect | 22480.0ms
| NamedSoundEffect | named_sound_effect | 22483.0ms
| NamedSoundEffect | named_sound_effect | 22487.0ms
| NamedSoundEffect | named_sound_effect | 22673.0ms
| NamedSoundEffect | named_sound_effect | 22678.0ms
| NamedSoundEffect | named_sound_effect | 22681.0ms
| NamedSoundEffect | named_sound_effect | 22684.0ms
| NamedSoundEffect | named_sound_effect | 22783.0ms
| NamedSoundEffect | named_sound_effect | 22788.0ms
| NamedSoundEffect | named_sound_effect | 22791.0ms
| NamedSoundEffect | named_sound_effect | 22912.0ms
| NamedSoundEffect | named_sound_effect | 22916.0ms
| NamedSoundEffect | named_sound_effect | 22919.0ms
| NamedSoundEffect | named_sound_effect | 22922.0ms
| NamedSoundEffect | named_sound_effect | 22925.0ms
| NamedSoundEffect | named_sound_effect | 23019.0ms
| NamedSoundEffect | named_sound_effect | 23022.0ms
| NamedSoundEffect | named_sound_effect | 23025.0ms
| NamedSoundEffect | named_sound_effect | 23029.0ms
| NamedSoundEffect | named_sound_effect | 23213.0ms
| NamedSoundEffect | named_sound_effect | 23215.0ms
| NamedSoundEffect | named_sound_effect | 23279.0ms
| NamedSoundEffect | named_sound_effect | 23284.0ms
| NamedSoundEffect | named_sound_effect | 23286.0ms
| NamedSoundEffect | named_sound_effect | 23368.0ms
| NamedSoundEffect | named_sound_effect | 23370.0ms
| NamedSoundEffect | named_sound_effect | 23375.0ms
| NamedSoundEffect | named_sound_effect | 23627.0ms
| NamedSoundEffect | named_sound_effect | 23631.0ms
| NamedSoundEffect | named_sound_effect | 23634.0ms
| NamedSoundEffect | named_sound_effect | 23637.0ms
| NamedSoundEffect | named_sound_effect | 23640.0ms
| NamedSoundEffect | named_sound_effect | 23745.0ms
| NamedSoundEffect | named_sound_effect | 23758.0ms
| NamedSoundEffect | named_sound_effect | 23761.0ms
| NamedSoundEffect | named_sound_effect | 23764.0ms
| NamedSoundEffect | named_sound_effect | 23887.0ms
| NamedSoundEffect | named_sound_effect | 23889.0ms
| NamedSoundEffect | named_sound_effect | 23893.0ms
| NamedSoundEffect | named_sound_effect | 23896.0ms
| NamedSoundEffect | named_sound_effect | 23983.0ms
| NamedSoundEffect | named_sound_effect | 23985.0ms
| NamedSoundEffect | named_sound_effect | 23987.0ms
| NamedSoundEffect | named_sound_effect | 24093.0ms
| NamedSoundEffect | named_sound_effect | 24096.0ms
| NamedSoundEffect | named_sound_effect | 24175.0ms
| NamedSoundEffect | named_sound_effect | 24177.0ms
| NamedSoundEffect | named_sound_effect | 24230.0ms
| NamedSoundEffect | named_sound_effect | 24264.0ms
| NamedSoundEffect | named_sound_effect | 24299.0ms
| NamedSoundEffect | named_sound_effect | 24412.0ms
| NamedSoundEffect | named_sound_effect | 24417.0ms
| NamedSoundEffect | named_sound_effect | 24419.0ms
| NamedSoundEffect | named_sound_effect | 24486.0ms
| NamedSoundEffect | named_sound_effect | 24489.0ms
| NamedSoundEffect | named_sound_effect | 24540.0ms
| NamedSoundEffect | named_sound_effect | 24617.0ms
| NamedSoundEffect | named_sound_effect | 24659.0ms
| NamedSoundEffect | named_sound_effect | 24661.0ms
| NamedSoundEffect | named_sound_effect | 24718.0ms
| NamedSoundEffect | named_sound_effect | 24765.0ms
| EntityTeleport | entity_teleport | 24802.0ms
| NamedSoundEffect | named_sound_effect | 24832.0ms
| NamedSoundEffect | named_sound_effect | 24910.0ms
| NamedSoundEffect | named_sound_effect | 24912.0ms
| NamedSoundEffect | named_sound_effect | 24960.0ms
| NamedSoundEffect | named_sound_effect | 24993.0ms
| NamedSoundEffect | named_sound_effect | 24995.0ms
| NamedSoundEffect | named_sound_effect | 24997.0ms
| NamedSoundEffect | named_sound_effect | 25104.0ms
| NamedSoundEffect | named_sound_effect | 25106.0ms
| NamedSoundEffect | named_sound_effect | 25111.0ms
| NamedSoundEffect | named_sound_effect | 25196.0ms
| NamedSoundEffect | named_sound_effect | 25289.0ms
| NamedSoundEffect | named_sound_effect | 25344.0ms
| NamedSoundEffect | named_sound_effect | 25348.0ms
| NamedSoundEffect | named_sound_effect | 25406.0ms
| NamedSoundEffect | named_sound_effect | 25459.0ms
| NamedSoundEffect | named_sound_effect | 25462.0ms
| NamedSoundEffect | named_sound_effect | 25465.0ms
| NamedSoundEffect | named_sound_effect | 25523.0ms
| NamedSoundEffect | named_sound_effect | 25603.0ms
| NamedSoundEffect | named_sound_effect | 25606.0ms
| EntityTeleport | entity_teleport | 25653.0ms
| NamedSoundEffect | named_sound_effect | 25841.0ms
| NamedSoundEffect | named_sound_effect | 25844.0ms
| NamedSoundEffect | named_sound_effect | 25856.0ms
| NamedSoundEffect | named_sound_effect | 25858.0ms
| NamedSoundEffect | named_sound_effect | 25861.0ms
| NamedSoundEffect | named_sound_effect | 26006.0ms
| NamedSoundEffect | named_sound_effect | 26009.0ms
| NamedSoundEffect | named_sound_effect | 26011.0ms
| NamedSoundEffect | named_sound_effect | 26104.0ms
| NamedSoundEffect | named_sound_effect | 26106.0ms
| NamedSoundEffect | named_sound_effect | 26108.0ms
| NamedSoundEffect | named_sound_effect | 26110.0ms
| PlayerInfo | player_info | 26112.0ms
| Chat | chat | 26592.0ms
| PlayerInfo | player_info | 26594.0ms
| NamedEntitySpawn | named_entity_spawn | 26596.0ms
| EntityMetadata | entity_metadata | 26599.0ms
| EntityUpdateAttributes | entity_update_attributes | 26601.0ms
| EntityTeleport | entity_teleport | 26604.0ms
| EntityUpdateAttributes | entity_update_attributes | 26606.0ms
| NamedSoundEffect | named_sound_effect | 26608.0ms
| EntityTeleport | entity_teleport | 26610.0ms
| NamedSoundEffect | named_sound_effect | 26613.0ms
| NamedSoundEffect | named_sound_effect | 26616.0ms
| NamedSoundEffect | named_sound_effect | 26618.0ms
| NamedSoundEffect | named_sound_effect | 26621.0ms
| NamedSoundEffect | named_sound_effect | 26623.0ms
| NamedSoundEffect | named_sound_effect | 26627.0ms
| NamedSoundEffect | named_sound_effect | 26630.0ms
| NamedSoundEffect | named_sound_effect | 27292.0ms
| NamedSoundEffect | named_sound_effect | 27297.0ms
| NamedSoundEffect | named_sound_effect | 27300.0ms
| NamedSoundEffect | named_sound_effect | 27304.0ms
| NamedSoundEffect | named_sound_effect | 27307.0ms
| NamedSoundEffect | named_sound_effect | 27310.0ms
| NamedSoundEffect | named_sound_effect | 27312.0ms
| NamedSoundEffect | named_sound_effect | 27317.0ms
| NamedSoundEffect | named_sound_effect | 27320.0ms
| NamedSoundEffect | named_sound_effect | 27323.0ms
| NamedSoundEffect | named_sound_effect | 27326.0ms
| NamedSoundEffect | named_sound_effect | 27329.0ms
| NamedSoundEffect | named_sound_effect | 27332.0ms
| NamedSoundEffect | named_sound_effect | 27336.0ms
| NamedSoundEffect | named_sound_effect | 27340.0ms
| NamedSoundEffect | named_sound_effect | 27342.0ms
| NamedSoundEffect | named_sound_effect | 27345.0ms
| NamedSoundEffect | named_sound_effect | 27348.0ms
| NamedSoundEffect | named_sound_effect | 27351.0ms
| NamedSoundEffect | named_sound_effect | 27355.0ms
| NamedSoundEffect | named_sound_effect | 27358.0ms
| NamedSoundEffect | named_sound_effect | 28118.0ms
| NamedSoundEffect | named_sound_effect | 28120.0ms
| NamedSoundEffect | named_sound_effect | 28125.0ms
| EntityTeleport | entity_teleport | 28128.0ms
| NamedSoundEffect | named_sound_effect | 28130.0ms
| NamedSoundEffect | named_sound_effect | 28133.0ms
| NamedSoundEffect | named_sound_effect | 28137.0ms
| NamedSoundEffect | named_sound_effect | 28141.0ms
| NamedSoundEffect | named_sound_effect | 28146.0ms
| NamedSoundEffect | named_sound_effect | 28148.0ms
| NamedSoundEffect | named_sound_effect | 28151.0ms
| NamedSoundEffect | named_sound_effect | 28154.0ms
| NamedSoundEffect | named_sound_effect | 28157.0ms
| NamedSoundEffect | named_sound_effect | 28159.0ms
| NamedSoundEffect | named_sound_effect | 28164.0ms
| NamedSoundEffect | named_sound_effect | 28167.0ms
| NamedSoundEffect | named_sound_effect | 28170.0ms
| NamedSoundEffect | named_sound_effect | 28172.0ms
| NamedSoundEffect | named_sound_effect | 28175.0ms
| NamedSoundEffect | named_sound_effect | 28177.0ms
| NamedSoundEffect | named_sound_effect | 28182.0ms
| NamedSoundEffect | named_sound_effect | 28778.0ms
| NamedSoundEffect | named_sound_effect | 28781.0ms
| NamedSoundEffect | named_sound_effect | 28784.0ms
| NamedSoundEffect | named_sound_effect | 28788.0ms
| NamedSoundEffect | named_sound_effect | 28792.0ms
| NamedSoundEffect | named_sound_effect | 28797.0ms
| NamedSoundEffect | named_sound_effect | 28801.0ms
| EntityLook | entity_look | 28804.0ms
| NamedSoundEffect | named_sound_effect | 28807.0ms
| NamedSoundEffect | named_sound_effect | 28809.0ms
| NamedSoundEffect | named_sound_effect | 28812.0ms
| NamedSoundEffect | named_sound_effect | 28817.0ms
| NamedSoundEffect | named_sound_effect | 28820.0ms
| NamedSoundEffect | named_sound_effect | 28823.0ms
| NamedSoundEffect | named_sound_effect | 28826.0ms
| NamedSoundEffect | named_sound_effect | 28830.0ms
| NamedSoundEffect | named_sound_effect | 28833.0ms
| NamedSoundEffect | named_sound_effect | 28837.0ms
| NamedSoundEffect | named_sound_effect | 28841.0ms
| NamedSoundEffect | named_sound_effect | 28843.0ms
| NamedSoundEffect | named_sound_effect | 29286.0ms
| NamedSoundEffect | named_sound_effect | 29289.0ms
| NamedSoundEffect | named_sound_effect | 29293.0ms
| NamedSoundEffect | named_sound_effect | 29297.0ms
| NamedSoundEffect | named_sound_effect | 29300.0ms
| NamedSoundEffect | named_sound_effect | 29303.0ms
| NamedSoundEffect | named_sound_effect | 29306.0ms
| NamedSoundEffect | named_sound_effect | 29312.0ms
| NamedSoundEffect | named_sound_effect | 29315.0ms
| NamedSoundEffect | named_sound_effect | 29320.0ms
| NamedSoundEffect | named_sound_effect | 29322.0ms
| NamedSoundEffect | named_sound_effect | 29325.0ms
| NamedSoundEffect | named_sound_effect | 29669.0ms
| NamedSoundEffect | named_sound_effect | 29673.0ms
| NamedSoundEffect | named_sound_effect | 29676.0ms
| NamedSoundEffect | named_sound_effect | 29679.0ms
| NamedSoundEffect | named_sound_effect | 29682.0ms
| NamedSoundEffect | named_sound_effect | 29687.0ms
| NamedSoundEffect | named_sound_effect | 29690.0ms
| NamedSoundEffect | named_sound_effect | 29694.0ms
| NamedSoundEffect | named_sound_effect | 29697.0ms
| NamedSoundEffect | named_sound_effect | 29700.0ms
| NamedSoundEffect | named_sound_effect | 29704.0ms
| NamedSoundEffect | named_sound_effect | 29931.0ms
| NamedSoundEffect | named_sound_effect | 29933.0ms
| NamedSoundEffect | named_sound_effect | 29936.0ms
| NamedSoundEffect | named_sound_effect | 29940.0ms
| NamedSoundEffect | named_sound_effect | 29943.0ms
| NamedSoundEffect | named_sound_effect | 29945.0ms
| NamedSoundEffect | named_sound_effect | 29947.0ms
| NamedSoundEffect | named_sound_effect | 30070.0ms
| NamedSoundEffect | named_sound_effect | 30074.0ms
| NamedSoundEffect | named_sound_effect | 30076.0ms
| NamedSoundEffect | named_sound_effect | 30078.0ms
| NamedSoundEffect | named_sound_effect | 30136.0ms
| EntityTeleport | entity_teleport | 30176.0ms
| NamedSoundEffect | named_sound_effect | 30228.0ms
| NamedSoundEffect | named_sound_effect | 30261.0ms
| NamedSoundEffect | named_sound_effect | 30264.0ms
| NamedSoundEffect | named_sound_effect | 30322.0ms
| NamedSoundEffect | named_sound_effect | 30325.0ms
| NamedSoundEffect | named_sound_effect | 30375.0ms
| NamedSoundEffect | named_sound_effect | 30402.0ms
| NamedSoundEffect | named_sound_effect | 30463.0ms
| NamedSoundEffect | named_sound_effect | 30465.0ms
| NamedSoundEffect | named_sound_effect | 30509.0ms
| KeepAlive | keep_alive | 30511.0ms
| NamedSoundEffect | named_sound_effect | 30566.0ms
| NamedSoundEffect | named_sound_effect | 30568.0ms
| NamedSoundEffect | named_sound_effect | 30650.0ms
| NamedSoundEffect | named_sound_effect | 30695.0ms
| NamedSoundEffect | named_sound_effect | 30697.0ms
| PlayerInfo | player_info | 30721.0ms
| NamedSoundEffect | named_sound_effect | 30796.0ms
| NamedSoundEffect | named_sound_effect | 30801.0ms
| NamedSoundEffect | named_sound_effect | 30803.0ms
| EntityTeleport | entity_teleport | 30805.0ms
| NamedSoundEffect | named_sound_effect | 30807.0ms
| NamedSoundEffect | named_sound_effect | 31012.0ms
| EntityLook | entity_look | 31015.0ms
| NamedSoundEffect | named_sound_effect | 31017.0ms
| NamedSoundEffect | named_sound_effect | 31019.0ms
| NamedSoundEffect | named_sound_effect | 31024.0ms
| NamedSoundEffect | named_sound_effect | 31197.0ms
| NamedSoundEffect | named_sound_effect | 31201.0ms
| NamedSoundEffect | named_sound_effect | 31204.0ms
| NamedSoundEffect | named_sound_effect | 31207.0ms
| NamedSoundEffect | named_sound_effect | 31209.0ms
| NamedSoundEffect | named_sound_effect | 31350.0ms
| NamedSoundEffect | named_sound_effect | 31353.0ms
| NamedSoundEffect | named_sound_effect | 31357.0ms
| PlayerInfo | player_info | 31645.0ms
| NamedSoundEffect | named_sound_effect | 31648.0ms
| Chat | chat | 32220.0ms
| PlayerInfo | player_info | 32223.0ms
| NamedEntitySpawn | named_entity_spawn | 32226.0ms
| EntityMetadata | entity_metadata | 32228.0ms
| EntityUpdateAttributes | entity_update_attributes | 32231.0ms
| EntityTeleport | entity_teleport | 32235.0ms
| EntityUpdateAttributes | entity_update_attributes | 32237.0ms
| NamedSoundEffect | named_sound_effect | 32240.0ms
| NamedSoundEffect | named_sound_effect | 32242.0ms
| NamedSoundEffect | named_sound_effect | 32247.0ms
| EntityTeleport | entity_teleport | 32249.0ms
| NamedSoundEffect | named_sound_effect | 32253.0ms
| NamedSoundEffect | named_sound_effect | 32256.0ms
| NamedSoundEffect | named_sound_effect | 32259.0ms
| NamedSoundEffect | named_sound_effect | 32261.0ms
| NamedSoundEffect | named_sound_effect | 32266.0ms
| NamedSoundEffect | named_sound_effect | 32269.0ms
| NamedSoundEffect | named_sound_effect | 32271.0ms
| NamedSoundEffect | named_sound_effect | 32275.0ms
| NamedSoundEffect | named_sound_effect | 32278.0ms
| NamedSoundEffect | named_sound_effect | 32281.0ms
| NamedSoundEffect | named_sound_effect | 32286.0ms
| NamedSoundEffect | named_sound_effect | 33193.0ms
| NamedSoundEffect | named_sound_effect | 33196.0ms
| NamedSoundEffect | named_sound_effect | 33199.0ms
| NamedSoundEffect | named_sound_effect | 33202.0ms
| NamedSoundEffect | named_sound_effect | 33204.0ms
| NamedSoundEffect | named_sound_effect | 33207.0ms
| NamedSoundEffect | named_sound_effect | 33211.0ms
| NamedSoundEffect | named_sound_effect | 33213.0ms
| NamedSoundEffect | named_sound_effect | 33216.0ms
| NamedSoundEffect | named_sound_effect | 33218.0ms
| NamedSoundEffect | named_sound_effect | 33220.0ms
| NamedSoundEffect | named_sound_effect | 33223.0ms
| NamedSoundEffect | named_sound_effect | 33228.0ms
| NamedSoundEffect | named_sound_effect | 33230.0ms
| NamedSoundEffect | named_sound_effect | 33232.0ms
| NamedSoundEffect | named_sound_effect | 33235.0ms
| NamedSoundEffect | named_sound_effect | 33238.0ms
| NamedSoundEffect | named_sound_effect | 33242.0ms
| NamedSoundEffect | named_sound_effect | 33246.0ms
| NamedSoundEffect | named_sound_effect | 33250.0ms
| NamedSoundEffect | named_sound_effect | 33253.0ms
| NamedSoundEffect | named_sound_effect | 33255.0ms
| NamedSoundEffect | named_sound_effect | 33257.0ms
| NamedSoundEffect | named_sound_effect | 33260.0ms
| NamedSoundEffect | named_sound_effect | 33264.0ms
| NamedSoundEffect | named_sound_effect | 33267.0ms
| NamedSoundEffect | named_sound_effect | 33269.0ms
| NamedSoundEffect | named_sound_effect | 33271.0ms
| NamedSoundEffect | named_sound_effect | 33274.0ms
| NamedSoundEffect | named_sound_effect | 33276.0ms
| NamedSoundEffect | named_sound_effect | 33281.0ms
| NamedSoundEffect | named_sound_effect | 33284.0ms
| NamedSoundEffect | named_sound_effect | 33287.0ms
| NamedSoundEffect | named_sound_effect | 33872.0ms
| NamedSoundEffect | named_sound_effect | 33875.0ms
| NamedSoundEffect | named_sound_effect | 33877.0ms
| NamedSoundEffect | named_sound_effect | 33879.0ms
| NamedSoundEffect | named_sound_effect | 33884.0ms
| NamedSoundEffect | named_sound_effect | 33887.0ms
| NamedSoundEffect | named_sound_effect | 33889.0ms
| NamedSoundEffect | named_sound_effect | 33891.0ms
| NamedSoundEffect | named_sound_effect | 33894.0ms
| NamedSoundEffect | named_sound_effect | 33896.0ms
| NamedSoundEffect | named_sound_effect | 33901.0ms
| NamedSoundEffect | named_sound_effect | 33904.0ms
| NamedSoundEffect | named_sound_effect | 33906.0ms
| NamedSoundEffect | named_sound_effect | 33908.0ms
| NamedSoundEffect | named_sound_effect | 33911.0ms
| NamedSoundEffect | named_sound_effect | 33913.0ms
| NamedSoundEffect | named_sound_effect | 33918.0ms
| NamedSoundEffect | named_sound_effect | 33920.0ms
| NamedSoundEffect | named_sound_effect | 33923.0ms
| NamedSoundEffect | named_sound_effect | 33925.0ms
| NamedSoundEffect | named_sound_effect | 34263.0ms
| NamedSoundEffect | named_sound_effect | 34268.0ms
| NamedSoundEffect | named_sound_effect | 34271.0ms
| NamedSoundEffect | named_sound_effect | 34273.0ms
| NamedSoundEffect | named_sound_effect | 34276.0ms
| NamedSoundEffect | named_sound_effect | 34278.0ms
| NamedSoundEffect | named_sound_effect | 34283.0ms
| NamedSoundEffect | named_sound_effect | 34286.0ms
| NamedSoundEffect | named_sound_effect | 34479.0ms
| NamedSoundEffect | named_sound_effect | 34482.0ms
| NamedSoundEffect | named_sound_effect | 34485.0ms
| NamedSoundEffect | named_sound_effect | 34488.0ms
| NamedSoundEffect | named_sound_effect | 34491.0ms
| NamedSoundEffect | named_sound_effect | 34495.0ms
| NamedSoundEffect | named_sound_effect | 34627.0ms
| NamedSoundEffect | named_sound_effect | 34629.0ms
| NamedSoundEffect | named_sound_effect | 34634.0ms
| NamedSoundEffect | named_sound_effect | 34637.0ms
| NamedSoundEffect | named_sound_effect | 34640.0ms
| NamedSoundEffect | named_sound_effect | 34642.0ms
| NamedSoundEffect | named_sound_effect | 34733.0ms
| NamedSoundEffect | named_sound_effect | 34738.0ms
| NamedSoundEffect | named_sound_effect | 34810.0ms
| NamedSoundEffect | named_sound_effect | 34848.0ms
| NamedSoundEffect | named_sound_effect | 34949.0ms
| NamedSoundEffect | named_sound_effect | 35047.0ms
| NamedSoundEffect | named_sound_effect | 35049.0ms
| NamedSoundEffect | named_sound_effect | 35051.0ms
| NamedSoundEffect | named_sound_effect | 35058.0ms
| NamedSoundEffect | named_sound_effect | 35063.0ms
| NamedSoundEffect | named_sound_effect | 35065.0ms
| NamedSoundEffect | named_sound_effect | 35208.0ms
| NamedSoundEffect | named_sound_effect | 35240.0ms
| NamedSoundEffect | named_sound_effect | 35295.0ms
| NamedSoundEffect | named_sound_effect | 35299.0ms
| NamedSoundEffect | named_sound_effect | 35302.0ms
| NamedSoundEffect | named_sound_effect | 35304.0ms
| NamedSoundEffect | named_sound_effect | 35386.0ms
| EntityTeleport | entity_teleport | 35438.0ms
| NamedSoundEffect | named_sound_effect | 35440.0ms
| NamedSoundEffect | named_sound_effect | 35514.0ms
| NamedSoundEffect | named_sound_effect | 35517.0ms
| NamedSoundEffect | named_sound_effect | 35519.0ms
| NamedSoundEffect | named_sound_effect | 35578.0ms
| NamedSoundEffect | named_sound_effect | 35581.0ms
| NamedSoundEffect | named_sound_effect | 35674.0ms
| NamedSoundEffect | named_sound_effect | 35677.0ms
| NamedSoundEffect | named_sound_effect | 36139.0ms
| NamedSoundEffect | named_sound_effect | 36141.0ms
| NamedSoundEffect | named_sound_effect | 36144.0ms
| NamedSoundEffect | named_sound_effect | 36148.0ms
| EntityTeleport | entity_teleport | 36151.0ms
| NamedSoundEffect | named_sound_effect | 36153.0ms
| NamedSoundEffect | named_sound_effect | 36156.0ms
| NamedSoundEffect | named_sound_effect | 36158.0ms
| NamedSoundEffect | named_sound_effect | 36161.0ms
| NamedSoundEffect | named_sound_effect | 36165.0ms
| NamedSoundEffect | named_sound_effect | 36168.0ms
| NamedSoundEffect | named_sound_effect | 36171.0ms
| NamedSoundEffect | named_sound_effect | 36398.0ms
| NamedSoundEffect | named_sound_effect | 36400.0ms
| NamedSoundEffect | named_sound_effect | 36402.0ms
| NamedSoundEffect | named_sound_effect | 36407.0ms
| NamedSoundEffect | named_sound_effect | 36409.0ms
| EntityTeleport | entity_teleport | 36412.0ms
| NamedSoundEffect | named_sound_effect | 36414.0ms
| NamedSoundEffect | named_sound_effect | 36416.0ms
| NamedSoundEffect | named_sound_effect | 36419.0ms
| NamedSoundEffect | named_sound_effect | 36424.0ms
| NamedSoundEffect | named_sound_effect | 37312.0ms
| NamedSoundEffect | named_sound_effect | 37315.0ms
| NamedSoundEffect | named_sound_effect | 37317.0ms
| NamedSoundEffect | named_sound_effect | 37319.0ms
| NamedSoundEffect | named_sound_effect | 37324.0ms
| NamedSoundEffect | named_sound_effect | 37326.0ms
| NamedSoundEffect | named_sound_effect | 37328.0ms
| NamedSoundEffect | named_sound_effect | 37331.0ms
| NamedSoundEffect | named_sound_effect | 37333.0ms
| NamedSoundEffect | named_sound_effect | 37336.0ms
| NamedSoundEffect | named_sound_effect | 37341.0ms
| NamedSoundEffect | named_sound_effect | 37343.0ms
| NamedSoundEffect | named_sound_effect | 37346.0ms
| NamedSoundEffect | named_sound_effect | 37349.0ms
| NamedSoundEffect | named_sound_effect | 37351.0ms
| NamedSoundEffect | named_sound_effect | 37354.0ms
| NamedSoundEffect | named_sound_effect | 37358.0ms
| NamedSoundEffect | named_sound_effect | 37360.0ms
| NamedSoundEffect | named_sound_effect | 37363.0ms
| NamedSoundEffect | named_sound_effect | 37365.0ms
| NamedSoundEffect | named_sound_effect | 37368.0ms
| NamedSoundEffect | named_sound_effect | 37370.0ms
| NamedSoundEffect | named_sound_effect | 37375.0ms
| NamedSoundEffect | named_sound_effect | 38239.0ms
| NamedSoundEffect | named_sound_effect | 38241.0ms
| NamedSoundEffect | named_sound_effect | 38244.0ms
| NamedSoundEffect | named_sound_effect | 38247.0ms
| NamedSoundEffect | named_sound_effect | 38252.0ms
| EntityLook | entity_look | 38255.0ms
| NamedSoundEffect | named_sound_effect | 38258.0ms
| NamedSoundEffect | named_sound_effect | 38262.0ms
| NamedSoundEffect | named_sound_effect | 38265.0ms
| NamedSoundEffect | named_sound_effect | 38269.0ms
| NamedSoundEffect | named_sound_effect | 38274.0ms
| NamedSoundEffect | named_sound_effect | 38278.0ms
| NamedSoundEffect | named_sound_effect | 38281.0ms
| NamedSoundEffect | named_sound_effect | 38284.0ms
| NamedSoundEffect | named_sound_effect | 38287.0ms
| NamedSoundEffect | named_sound_effect | 38290.0ms
| NamedSoundEffect | named_sound_effect | 38294.0ms
| NamedSoundEffect | named_sound_effect | 38298.0ms
| NamedSoundEffect | named_sound_effect | 38301.0ms
| NamedSoundEffect | named_sound_effect | 38304.0ms
| NamedSoundEffect | named_sound_effect | 38307.0ms
| NamedSoundEffect | named_sound_effect | 38309.0ms
| NamedSoundEffect | named_sound_effect | 38314.0ms
| NamedSoundEffect | named_sound_effect | 38318.0ms
| NamedSoundEffect | named_sound_effect | 38320.0ms
| NamedSoundEffect | named_sound_effect | 39086.0ms
| NamedSoundEffect | named_sound_effect | 39089.0ms
| NamedSoundEffect | named_sound_effect | 39092.0ms
| NamedSoundEffect | named_sound_effect | 39095.0ms
| NamedSoundEffect | named_sound_effect | 39097.0ms
| NamedSoundEffect | named_sound_effect | 39099.0ms
| NamedSoundEffect | named_sound_effect | 39104.0ms
| NamedSoundEffect | named_sound_effect | 39108.0ms
| NamedSoundEffect | named_sound_effect | 39110.0ms
| NamedSoundEffect | named_sound_effect | 39113.0ms
| NamedSoundEffect | named_sound_effect | 39116.0ms
| NamedSoundEffect | named_sound_effect | 39118.0ms
| NamedSoundEffect | named_sound_effect | 39123.0ms
| NamedSoundEffect | named_sound_effect | 39125.0ms
| NamedSoundEffect | named_sound_effect | 39128.0ms
| NamedSoundEffect | named_sound_effect | 39131.0ms
| NamedSoundEffect | named_sound_effect | 39134.0ms
| NamedSoundEffect | named_sound_effect | 39137.0ms
| NamedSoundEffect | named_sound_effect | 39141.0ms
| NamedSoundEffect | named_sound_effect | 39144.0ms
| NamedSoundEffect | named_sound_effect | 39147.0ms
| NamedSoundEffect | named_sound_effect | 39150.0ms
| NamedSoundEffect | named_sound_effect | 39680.0ms
| NamedSoundEffect | named_sound_effect | 39683.0ms
| NamedSoundEffect | named_sound_effect | 39685.0ms
| NamedSoundEffect | named_sound_effect | 39688.0ms
| NamedSoundEffect | named_sound_effect | 39690.0ms
| NamedSoundEffect | named_sound_effect | 39692.0ms
| NamedSoundEffect | named_sound_effect | 39696.0ms
| NamedSoundEffect | named_sound_effect | 39699.0ms
| NamedSoundEffect | named_sound_effect | 39702.0ms
| NamedSoundEffect | named_sound_effect | 39704.0ms
| NamedSoundEffect | named_sound_effect | 39706.0ms
| NamedSoundEffect | named_sound_effect | 39708.0ms
| NamedSoundEffect | named_sound_effect | 39713.0ms
| NamedSoundEffect | named_sound_effect | 39715.0ms
| NamedSoundEffect | named_sound_effect | 39718.0ms
| NamedSoundEffect | named_sound_effect | 39720.0ms
| NamedSoundEffect | named_sound_effect | 40253.0ms
| NamedSoundEffect | named_sound_effect | 40255.0ms
| Difficulty | difficulty | 40258.0ms
| NamedSoundEffect | named_sound_effect | 40260.0ms
| SpawnEntityLiving | spawn_entity_living | 40263.0ms
| EntityMetadata | entity_metadata | 40265.0ms
| EntityUpdateAttributes | entity_update_attributes | 40268.0ms
| EntityUpdateAttributes | entity_update_attributes | 40270.0ms
| NamedSoundEffect | named_sound_effect | 40273.0ms
| NamedSoundEffect | named_sound_effect | 40275.0ms
| MultiBlockChange | multi_block_change | 40279.0ms
| EntityTeleport | entity_teleport | 40281.0ms
| NamedSoundEffect | named_sound_effect | 40284.0ms
| NamedSoundEffect | named_sound_effect | 40286.0ms
| NamedSoundEffect | named_sound_effect | 40289.0ms
| NamedSoundEffect | named_sound_effect | 40291.0ms
| NamedSoundEffect | named_sound_effect | 40293.0ms
| NamedSoundEffect | named_sound_effect | 40297.0ms
| NamedSoundEffect | named_sound_effect | 40300.0ms
| NamedSoundEffect | named_sound_effect | 40303.0ms
| WorldParticles | world_particles | 41059.0ms
| WorldParticles | world_particles | 41062.0ms
| WorldParticles | world_particles | 41067.0ms
| WorldParticles | world_particles | 41069.0ms
| WorldParticles | world_particles | 41071.0ms
| WorldParticles | world_particles | 41074.0ms
| WorldParticles | world_particles | 41076.0ms
| WorldParticles | world_particles | 41078.0ms
| WorldParticles | world_particles | 41083.0ms
| WorldParticles | world_particles | 41085.0ms
| WorldParticles | world_particles | 41088.0ms
| WorldParticles | world_particles | 41090.0ms
| NamedSoundEffect | named_sound_effect | 41092.0ms
| NamedSoundEffect | named_sound_effect | 41095.0ms
| EntityLook | entity_look | 41097.0ms
| NamedSoundEffect | named_sound_effect | 41100.0ms
| NamedSoundEffect | named_sound_effect | 41103.0ms
| NamedSoundEffect | named_sound_effect | 41106.0ms
| NamedSoundEffect | named_sound_effect | 41108.0ms
| NamedSoundEffect | named_sound_effect | 41110.0ms
| NamedSoundEffect | named_sound_effect | 41113.0ms
| NamedSoundEffect | named_sound_effect | 41118.0ms
| NamedSoundEffect | named_sound_effect | 41120.0ms
| NamedSoundEffect | named_sound_effect | 41123.0ms
| NamedSoundEffect | named_sound_effect | 41125.0ms
| NamedSoundEffect | named_sound_effect | 41128.0ms
| NamedSoundEffect | named_sound_effect | 41130.0ms
| NamedSoundEffect | named_sound_effect | 41134.0ms
| NamedSoundEffect | named_sound_effect | 41138.0ms
| NamedSoundEffect | named_sound_effect | 41141.0ms
| NamedSoundEffect | named_sound_effect | 41144.0ms
| NamedSoundEffect | named_sound_effect | 41146.0ms
| NamedSoundEffect | named_sound_effect | 41149.0ms
| NamedSoundEffect | named_sound_effect | 41153.0ms
| NamedSoundEffect | named_sound_effect | 41156.0ms
| NamedSoundEffect | named_sound_effect | 42081.0ms
| EntityTeleport | entity_teleport | 42084.0ms
| NamedSoundEffect | named_sound_effect | 42086.0ms
| NamedSoundEffect | named_sound_effect | 42090.0ms
| NamedSoundEffect | named_sound_effect | 42092.0ms
| NamedSoundEffect | named_sound_effect | 42095.0ms
| NamedSoundEffect | named_sound_effect | 42097.0ms
| NamedSoundEffect | named_sound_effect | 42099.0ms
| NamedSoundEffect | named_sound_effect | 42104.0ms
| NamedSoundEffect | named_sound_effect | 42106.0ms
| Title | title | 42109.0ms
| NamedSoundEffect | named_sound_effect | 42111.0ms
| NamedSoundEffect | named_sound_effect | 42114.0ms
| NamedSoundEffect | named_sound_effect | 42116.0ms
| NamedSoundEffect | named_sound_effect | 42118.0ms
| NamedSoundEffect | named_sound_effect | 42123.0ms
| NamedSoundEffect | named_sound_effect | 42125.0ms
| Title | title | 42128.0ms
| NamedSoundEffect | named_sound_effect | 42131.0ms
| NamedSoundEffect | named_sound_effect | 42134.0ms
| GameStateChange | game_state_change | 42136.0ms
| NamedSoundEffect | named_sound_effect | 42138.0ms
| GameStateChange | game_state_change | 42140.0ms
| NamedSoundEffect | named_sound_effect | 42143.0ms
| GameStateChange | game_state_change | 42145.0ms
| NamedSoundEffect | named_sound_effect | 42148.0ms
| NamedSoundEffect | named_sound_effect | 42150.0ms
| NamedSoundEffect | named_sound_effect | 42152.0ms
| PlayerInfo | player_info | 42154.0ms
| PlayerInfo | player_info | 42159.0ms
| PlayerInfo | player_info | 42161.0ms
| PlayerInfo | player_info | 42163.0ms
| Abilities | abilities | 42165.0ms
| PlayerInfo | player_info | 42167.0ms
| GameStateChange | game_state_change | 42169.0ms
| Abilities | abilities | 42171.0ms
| Chat | chat | 42173.0ms
| PlayerInfo | player_info | 42175.0ms
| PlayerInfo | player_info | 42178.0ms
| PlayerInfo | player_info | 42180.0ms
| PlayerInfo | player_info | 42182.0ms
| PlayerInfo | player_info | 42187.0ms
| PlayerInfo | player_info | 42204.0ms
| GameStateChange | game_state_change | 42206.0ms
| Experience | experience | 42209.0ms
| GameStateChange | game_state_change | 42211.0ms
| NamedSoundEffect | named_sound_effect | 42213.0ms
| NamedSoundEffect | named_sound_effect | 42217.0ms
| NamedSoundEffect | named_sound_effect | 42219.0ms
| GameStateChange | game_state_change | 42221.0ms
| NamedSoundEffect | named_sound_effect | 42224.0ms
| GameStateChange | game_state_change | 42226.0ms
| NamedSoundEffect | named_sound_effect | 42228.0ms
| GameStateChange | game_state_change | 42230.0ms
| NamedSoundEffect | named_sound_effect | 42233.0ms
| GameStateChange | game_state_change | 42238.0ms
| NamedSoundEffect | named_sound_effect | 42241.0ms
| GameStateChange | game_state_change | 44134.0ms
| NamedSoundEffect | named_sound_effect | 44137.0ms
| GameStateChange | game_state_change | 44139.0ms
| NamedSoundEffect | named_sound_effect | 44142.0ms
| NamedSoundEffect | named_sound_effect | 44145.0ms
| GameStateChange | game_state_change | 44147.0ms
| NamedSoundEffect | named_sound_effect | 44150.0ms
| NamedSoundEffect | named_sound_effect | 44153.0ms
| GameStateChange | game_state_change | 44155.0ms
| GameStateChange | game_state_change | 44158.0ms
| NamedSoundEffect | named_sound_effect | 44160.0ms
| NamedSoundEffect | named_sound_effect | 44166.0ms
| GameStateChange | game_state_change | 44169.0ms
| NamedSoundEffect | named_sound_effect | 44171.0ms
| GameStateChange | game_state_change | 44173.0ms
| NamedSoundEffect | named_sound_effect | 44176.0ms
| GameStateChange | game_state_change | 44178.0ms
| NamedSoundEffect | named_sound_effect | 44181.0ms
| GameStateChange | game_state_change | 44183.0ms
| NamedSoundEffect | named_sound_effect | 44186.0ms
| NamedSoundEffect | named_sound_effect | 44189.0ms
| GameStateChange | game_state_change | 44191.0ms
| NamedSoundEffect | named_sound_effect | 44194.0ms
| NamedSoundEffect | named_sound_effect | 44198.0ms
| NamedSoundEffect | named_sound_effect | 44201.0ms
| GameStateChange | game_state_change | 44203.0ms
| GameStateChange | game_state_change | 44205.0ms
| NamedSoundEffect | named_sound_effect | 44208.0ms
| GameStateChange | game_state_change | 44210.0ms
| GameStateChange | game_state_change | 44215.0ms
| GameStateChange | game_state_change | 44218.0ms
| NamedSoundEffect | named_sound_effect | 44220.0ms
| GameStateChange | game_state_change | 44223.0ms
| NamedSoundEffect | named_sound_effect | 44226.0ms
| NamedSoundEffect | named_sound_effect | 44228.0ms
| NamedSoundEffect | named_sound_effect | 44232.0ms
| NamedSoundEffect | named_sound_effect | 44235.0ms
| GameStateChange | game_state_change | 44237.0ms
| NamedSoundEffect | named_sound_effect | 44240.0ms
| GameStateChange | game_state_change | 44242.0ms
| GameStateChange | game_state_change | 44270.0ms
| NamedSoundEffect | named_sound_effect | 44273.0ms
| NamedSoundEffect | named_sound_effect | 44275.0ms
| GameStateChange | game_state_change | 44277.0ms
| NamedSoundEffect | named_sound_effect | 44279.0ms
| NamedSoundEffect | named_sound_effect | 44284.0ms
| GameStateChange | game_state_change | 44286.0ms
| NamedSoundEffect | named_sound_effect | 44288.0ms
| GameStateChange | game_state_change | 44291.0ms
| NamedSoundEffect | named_sound_effect | 44293.0ms
| GameStateChange | game_state_change | 44295.0ms
| NamedSoundEffect | named_sound_effect | 44298.0ms
| NamedSoundEffect | named_sound_effect | 44301.0ms
| GameStateChange | game_state_change | 44303.0ms
| GameStateChange | game_state_change | 44305.0ms
| NamedSoundEffect | named_sound_effect | 44308.0ms
| NamedSoundEffect | named_sound_effect | 44313.0ms
| GameStateChange | game_state_change | 44315.0ms
| NamedSoundEffect | named_sound_effect | 44318.0ms
| GameStateChange | game_state_change | 44319.0ms
| GameStateChange | game_state_change | 44322.0ms
| NamedSoundEffect | named_sound_effect | 44324.0ms
| NamedSoundEffect | named_sound_effect | 44329.0ms
| GameStateChange | game_state_change | 44331.0ms
| NamedSoundEffect | named_sound_effect | 44334.0ms
| NamedSoundEffect | named_sound_effect | 44336.0ms
| GameStateChange | game_state_change | 44338.0ms
| NamedSoundEffect | named_sound_effect | 44341.0ms
| NamedSoundEffect | named_sound_effect | 44345.0ms
| GameStateChange | game_state_change | 44347.0ms
| EntityLook | entity_look | 44349.0ms
| NamedSoundEffect | named_sound_effect | 44352.0ms
| GameStateChange | game_state_change | 44354.0ms
| NamedSoundEffect | named_sound_effect | 44356.0ms
| GameStateChange | game_state_change | 44358.0ms
| GameStateChange | game_state_change | 44363.0ms
| NamedSoundEffect | named_sound_effect | 44365.0ms
| GameStateChange | game_state_change | 44367.0ms
| NamedSoundEffect | named_sound_effect | 44370.0ms
| NamedSoundEffect | named_sound_effect | 44372.0ms
| GameStateChange | game_state_change | 44373.0ms
| NamedSoundEffect | named_sound_effect | 44376.0ms
| NamedSoundEffect | named_sound_effect | 44379.0ms
| Chat | chat | 45430.0ms
| Chat | chat | 45470.0ms
| Chat | chat | 45519.0ms
| Chat | chat | 45560.0ms
| Chat | chat | 45601.0ms
| Chat | chat | 45640.0ms
| Chat | chat | 45681.0ms
| Chat | chat | 45745.0ms
| Chat | chat | 45847.0ms
| Chat | chat | 45935.0ms
| Chat | chat | 45989.0ms
| Chat | chat | 46106.0ms
| GameStateChange | game_state_change | 46109.0ms
| Advancements | advancements | 48427.0ms
| Experience | experience | 48429.0ms
| NamedSoundEffect | named_sound_effect | 48432.0ms
| NamedSoundEffect | named_sound_effect | 48436.0ms
| GameStateChange | game_state_change | 48439.0ms
| NamedSoundEffect | named_sound_effect | 48443.0ms
| GameStateChange | game_state_change | 48445.0ms
| NamedSoundEffect | named_sound_effect | 48449.0ms
| GameStateChange | game_state_change | 48452.0ms
| NamedSoundEffect | named_sound_effect | 48455.0ms
| GameStateChange | game_state_change | 48458.0ms
| GameStateChange | game_state_change | 48460.0ms
| NamedSoundEffect | named_sound_effect | 48463.0ms
| NamedSoundEffect | named_sound_effect | 48468.0ms
| GameStateChange | game_state_change | 48470.0ms
| GameStateChange | game_state_change | 48473.0ms
| NamedSoundEffect | named_sound_effect | 48477.0ms
| NamedSoundEffect | named_sound_effect | 48480.0ms
| NamedSoundEffect | named_sound_effect | 48484.0ms
| NamedSoundEffect | named_sound_effect | 48488.0ms
| GameStateChange | game_state_change | 48491.0ms
| NamedSoundEffect | named_sound_effect | 48494.0ms
| NamedSoundEffect | named_sound_effect | 48496.0ms
| GameStateChange | game_state_change | 48498.0ms
| NamedSoundEffect | named_sound_effect | 48500.0ms
| GameStateChange | game_state_change | 48502.0ms
| GameStateChange | game_state_change | 48506.0ms
| GameStateChange | game_state_change | 48508.0ms
| NamedSoundEffect | named_sound_effect | 48511.0ms
| NamedSoundEffect | named_sound_effect | 48513.0ms
| NamedSoundEffect | named_sound_effect | 48518.0ms
| GameStateChange | game_state_change | 48520.0ms
| GameStateChange | game_state_change | 48522.0ms
| NamedSoundEffect | named_sound_effect | 48525.0ms
| NamedSoundEffect | named_sound_effect | 48527.0ms
| GameStateChange | game_state_change | 48529.0ms
| GameStateChange | game_state_change | 48534.0ms
| NamedSoundEffect | named_sound_effect | 48537.0ms
| NamedSoundEffect | named_sound_effect | 48541.0ms
| NamedSoundEffect | named_sound_effect | 48543.0ms
| NamedSoundEffect | named_sound_effect | 48545.0ms
| GameStateChange | game_state_change | 48548.0ms
| NamedSoundEffect | named_sound_effect | 48550.0ms
| GameStateChange | game_state_change | 48552.0ms
| NamedSoundEffect | named_sound_effect | 48555.0ms
| GameStateChange | game_state_change | 48557.0ms
| NamedSoundEffect | named_sound_effect | 48560.0ms
| GameStateChange | game_state_change | 48562.0ms
| EntityTeleport | entity_teleport | 48564.0ms
| NamedSoundEffect | named_sound_effect | 48567.0ms
| NamedSoundEffect | named_sound_effect | 48570.0ms
| GameStateChange | game_state_change | 48572.0ms
| NamedSoundEffect | named_sound_effect | 48575.0ms
| GameStateChange | game_state_change | 48577.0ms
| GameStateChange | game_state_change | 48582.0ms
| GameStateChange | game_state_change | 48587.0ms
| NamedSoundEffect | named_sound_effect | 48590.0ms
| GameStateChange | game_state_change | 48592.0ms
| NamedSoundEffect | named_sound_effect | 48595.0ms
| NamedSoundEffect | named_sound_effect | 48598.0ms
| NamedSoundEffect | named_sound_effect | 48602.0ms
| NamedSoundEffect | named_sound_effect | 48605.0ms
| GameStateChange | game_state_change | 48607.0ms
| NamedSoundEffect | named_sound_effect | 48609.0ms
| NamedSoundEffect | named_sound_effect | 48612.0ms
| GameStateChange | game_state_change | 48614.0ms
| NamedSoundEffect | named_sound_effect | 48617.0ms
| GameStateChange | game_state_change | 48619.0ms
| NamedSoundEffect | named_sound_effect | 48624.0ms
| GameStateChange | game_state_change | 48626.0ms
| GameStateChange | game_state_change | 48628.0ms
| NamedSoundEffect | named_sound_effect | 48631.0ms
| GameStateChange | game_state_change | 48633.0ms
| NamedSoundEffect | named_sound_effect | 48640.0ms
| NamedSoundEffect | named_sound_effect | 48643.0ms
| NamedSoundEffect | named_sound_effect | 48645.0ms
| GameStateChange | game_state_change | 48647.0ms
| GameStateChange | game_state_change | 48650.0ms
| NamedSoundEffect | named_sound_effect | 48652.0ms
| KeepAlive | keep_alive | 48654.0ms
| NamedSoundEffect | named_sound_effect | 48658.0ms
| GameStateChange | game_state_change | 48661.0ms
| NamedSoundEffect | named_sound_effect | 48663.0ms
| GameStateChange | game_state_change | 48666.0ms
| NamedSoundEffect | named_sound_effect | 48668.0ms
| NamedSoundEffect | named_sound_effect | 48672.0ms
| GameStateChange | game_state_change | 48675.0ms
| NamedSoundEffect | named_sound_effect | 48677.0ms
| NamedSoundEffect | named_sound_effect | 48680.0ms
| GameStateChange | game_state_change | 48682.0ms
| EntityTeleport | entity_teleport | 48685.0ms
| GameStateChange | game_state_change | 48687.0ms
| NamedSoundEffect | named_sound_effect | 48691.0ms
| NamedSoundEffect | named_sound_effect | 48695.0ms
| GameStateChange | game_state_change | 48698.0ms
| GameStateChange | game_state_change | 48701.0ms
| NamedSoundEffect | named_sound_effect | 48705.0ms
| GameStateChange | game_state_change | 48707.0ms
| NamedSoundEffect | named_sound_effect | 48710.0ms
| GameStateChange | game_state_change | 48712.0ms
| NamedSoundEffect | named_sound_effect | 48715.0ms
| NamedSoundEffect | named_sound_effect | 48718.0ms
| NamedSoundEffect | named_sound_effect | 48727.0ms
| NamedSoundEffect | named_sound_effect | 48731.0ms
| GameStateChange | game_state_change | 48734.0ms
| GameStateChange | game_state_change | 48739.0ms
| NamedSoundEffect | named_sound_effect | 48743.0ms
| GameStateChange | game_state_change | 48746.0ms
| NamedSoundEffect | named_sound_effect | 48750.0ms
| NamedSoundEffect | named_sound_effect | 48754.0ms
| GameStateChange | game_state_change | 48757.0ms
| GameStateChange | game_state_change | 48761.0ms
| NamedSoundEffect | named_sound_effect | 48765.0ms
| NamedSoundEffect | named_sound_effect | 48768.0ms
| GameStateChange | game_state_change | 48770.0ms
| EntityLook | entity_look | 48773.0ms
| EntityTeleport | entity_teleport | 48777.0ms
| NamedSoundEffect | named_sound_effect | 48780.0ms
| GameStateChange | game_state_change | 48783.0ms
| NamedSoundEffect | named_sound_effect | 48786.0ms
| NamedSoundEffect | named_sound_effect | 48791.0ms
| GameStateChange | game_state_change | 48793.0ms
| NamedSoundEffect | named_sound_effect | 48796.0ms
| NamedSoundEffect | named_sound_effect | 48798.0ms
| GameStateChange | game_state_change | 48800.0ms
| NamedSoundEffect | named_sound_effect | 48802.0ms
| GameStateChange | game_state_change | 48804.0ms
| GameStateChange | game_state_change | 48809.0ms
| NamedSoundEffect | named_sound_effect | 48811.0ms
| GameStateChange | game_state_change | 48813.0ms
| NamedSoundEffect | named_sound_effect | 48816.0ms
| NamedSoundEffect | named_sound_effect | 48818.0ms
| NamedSoundEffect | named_sound_effect | 48820.0ms
| GameStateChange | game_state_change | 48822.0ms
| NamedSoundEffect | named_sound_effect | 48824.0ms
| GameStateChange | game_state_change | 48826.0ms
| NamedSoundEffect | named_sound_effect | 48830.0ms
| NamedSoundEffect | named_sound_effect | 48832.0ms
| NamedSoundEffect | named_sound_effect | 48834.0ms
| NamedSoundEffect | named_sound_effect | 48838.0ms
| NamedSoundEffect | named_sound_effect | 48841.0ms
| NamedSoundEffect | named_sound_effect | 48843.0ms
| NamedSoundEffect | named_sound_effect | 48846.0ms
| NamedSoundEffect | named_sound_effect | 48848.0ms
| NamedSoundEffect | named_sound_effect | 48851.0ms
| NamedSoundEffect | named_sound_effect | 48855.0ms
| NamedSoundEffect | named_sound_effect | 48858.0ms
| NamedSoundEffect | named_sound_effect | 48860.0ms
| NamedSoundEffect | named_sound_effect | 48863.0ms
| NamedSoundEffect | named_sound_effect | 48865.0ms
| NamedSoundEffect | named_sound_effect | 48867.0ms
| NamedSoundEffect | named_sound_effect | 48872.0ms
| NamedSoundEffect | named_sound_effect | 48874.0ms
| NamedSoundEffect | named_sound_effect | 48877.0ms
| NamedSoundEffect | named_sound_effect | 48879.0ms
| NamedSoundEffect | named_sound_effect | 48882.0ms
| EntityTeleport | entity_teleport | 51631.0ms
| NamedSoundEffect | named_sound_effect | 51633.0ms
| NamedSoundEffect | named_sound_effect | 51636.0ms
| NamedSoundEffect | named_sound_effect | 51648.0ms
| NamedSoundEffect | named_sound_effect | 51651.0ms
| NamedSoundEffect | named_sound_effect | 51653.0ms
| NamedSoundEffect | named_sound_effect | 51656.0ms
| NamedSoundEffect | named_sound_effect | 51659.0ms
| NamedSoundEffect | named_sound_effect | 51661.0ms
| NamedSoundEffect | named_sound_effect | 51666.0ms
| NamedSoundEffect | named_sound_effect | 51668.0ms
| NamedSoundEffect | named_sound_effect | 51671.0ms
| NamedSoundEffect | named_sound_effect | 51674.0ms
| NamedSoundEffect | named_sound_effect | 51677.0ms
| NamedSoundEffect | named_sound_effect | 51679.0ms
| NamedSoundEffect | named_sound_effect | 51684.0ms
| NamedSoundEffect | named_sound_effect | 51686.0ms
| NamedSoundEffect | named_sound_effect | 51688.0ms
| NamedSoundEffect | named_sound_effect | 51691.0ms
| NamedSoundEffect | named_sound_effect | 51694.0ms
| NamedSoundEffect | named_sound_effect | 51696.0ms
| NamedSoundEffect | named_sound_effect | 51701.0ms
| NamedSoundEffect | named_sound_effect | 51703.0ms
| NamedSoundEffect | named_sound_effect | 51706.0ms
| NamedSoundEffect | named_sound_effect | 51709.0ms
| NamedSoundEffect | named_sound_effect | 51712.0ms
| NamedSoundEffect | named_sound_effect | 51715.0ms
| NamedSoundEffect | named_sound_effect | 51719.0ms
| NamedSoundEffect | named_sound_effect | 51722.0ms
| NamedSoundEffect | named_sound_effect | 51724.0ms
| NamedSoundEffect | named_sound_effect | 51727.0ms
| NamedSoundEffect | named_sound_effect | 51730.0ms
| NamedSoundEffect | named_sound_effect | 51733.0ms
| NamedSoundEffect | named_sound_effect | 51737.0ms
| NamedSoundEffect | named_sound_effect | 51740.0ms
| NamedSoundEffect | named_sound_effect | 51742.0ms
| NamedSoundEffect | named_sound_effect | 51746.0ms
| NamedSoundEffect | named_sound_effect | 51748.0ms
| NamedSoundEffect | named_sound_effect | 51751.0ms
| NamedSoundEffect | named_sound_effect | 51757.0ms
| NamedSoundEffect | named_sound_effect | 51759.0ms
| NamedSoundEffect | named_sound_effect | 51762.0ms
| NamedSoundEffect | named_sound_effect | 51764.0ms
| NamedSoundEffect | named_sound_effect | 51767.0ms
| NamedSoundEffect | named_sound_effect | 51770.0ms
| NamedSoundEffect | named_sound_effect | 51774.0ms
| NamedSoundEffect | named_sound_effect | 51777.0ms
| NamedSoundEffect | named_sound_effect | 51779.0ms
| NamedSoundEffect | named_sound_effect | 51782.0ms
| NamedSoundEffect | named_sound_effect | 51784.0ms
| NamedSoundEffect | named_sound_effect | 51787.0ms
| NamedSoundEffect | named_sound_effect | 51791.0ms
| NamedSoundEffect | named_sound_effect | 51795.0ms
| NamedSoundEffect | named_sound_effect | 51797.0ms
| NamedSoundEffect | named_sound_effect | 51799.0ms
| NamedSoundEffect | named_sound_effect | 51802.0ms
| NamedSoundEffect | named_sound_effect | 51805.0ms
| NamedSoundEffect | named_sound_effect | 51809.0ms
| NamedSoundEffect | named_sound_effect | 51812.0ms
| NamedSoundEffect | named_sound_effect | 51815.0ms
| NamedSoundEffect | named_sound_effect | 51818.0ms
| NamedSoundEffect | named_sound_effect | 51820.0ms
| EntityDestroy | entity_destroy | 51824.0ms
| PlayerInfo | player_info | 51827.0ms
| Chat | chat | 52777.0ms
| EntityDestroy | entity_destroy | 52780.0ms
| PlayerInfo | player_info | 52782.0ms
| Chat | chat | 53029.0ms
| EntityDestroy | entity_destroy | 53031.0ms
| PlayerInfo | player_info | 53033.0ms
| Chat | chat | 53218.0ms
| EntityDestroy | entity_destroy | 53220.0ms
| PlayerInfo | player_info | 53222.0ms
| Chat | chat | 53421.0ms
| EntityDestroy | entity_destroy | 53423.0ms
| PlayerInfo | player_info | 53425.0ms
| Chat | chat | 53519.0ms
| CloseWindow | close_window | 53522.0ms
| EntityDestroy | entity_destroy | 53524.0ms
| EntityDestroy | entity_destroy | 53526.0ms
| EntityDestroy | entity_destroy | 53530.0ms
| EntityDestroy | entity_destroy | 53532.0ms
| EntityDestroy | entity_destroy | 53535.0ms
| EntityDestroy | entity_destroy | 53537.0ms
| EntityDestroy | entity_destroy | 53539.0ms
| EntityDestroy | entity_destroy | 53541.0ms
| EntityDestroy | entity_destroy | 53545.0ms
| Abilities | abilities | 53547.0ms
| EntityUpdateAttributes | entity_update_attributes | 53550.0ms
| Respawn | respawn | 53553.0ms
| Position | position | 53555.0ms
| SpawnPosition | spawn_position | 53557.0ms
| Difficulty | difficulty | 53560.0ms
| Experience | experience | 53562.0ms
| WorldBorder | world_border | 53563.0ms
| SpawnPosition | spawn_position | 53566.0ms
| EntityStatus | entity_status | 53568.0ms
| NamedEntitySpawn | named_entity_spawn | 53571.0ms
| EntityMetadata | entity_metadata | 53574.0ms
| EntityUpdateAttributes | entity_update_attributes | 53576.0ms
| NamedEntitySpawn | named_entity_spawn | 53578.0ms
| EntityMetadata | entity_metadata | 53581.0ms
| EntityUpdateAttributes | entity_update_attributes | 53586.0ms
| NamedEntitySpawn | named_entity_spawn | 53588.0ms
| EntityMetadata | entity_metadata | 53591.0ms
| EntityUpdateAttributes | entity_update_attributes | 53594.0ms
| NamedEntitySpawn | named_entity_spawn | 53597.0ms
| EntityMetadata | entity_metadata | 53599.0ms
| EntityUpdateAttributes | entity_update_attributes | 53602.0ms
| NamedEntitySpawn | named_entity_spawn | 53604.0ms
| EntityMetadata | entity_metadata | 53607.0ms
| EntityUpdateAttributes | entity_update_attributes | 53610.0ms
| EntityUpdateAttributes | entity_update_attributes | 53612.0ms
| WindowItems | window_items | 53616.0ms
| SetSlot | set_slot | 53618.0ms
| Transaction | transaction | 53619.0ms
| EntityUpdateAttributes | entity_update_attributes | 53622.0ms
| UpdateHealth | update_health | 53624.0ms
| HeldItemSlot | held_item_slot | 53626.0ms
| EntityStatus | entity_status | 53628.0ms
| GameStateChange | game_state_change | 53631.0ms
| Abilities | abilities | 53632.0ms
| Chat | chat | 53730.0ms
| PlayerInfo | player_info | 53732.0ms
| NamedEntitySpawn | named_entity_spawn | 53735.0ms
| EntityMetadata | entity_metadata | 53738.0ms
| EntityUpdateAttributes | entity_update_attributes | 53741.0ms
| Chat | chat | 53944.0ms
| PlayerInfo | player_info | 53946.0ms
| NamedEntitySpawn | named_entity_spawn | 53949.0ms
| EntityMetadata | entity_metadata | 53952.0ms
| EntityUpdateAttributes | entity_update_attributes | 53955.0ms
| Chat | chat | 54190.0ms
| PlayerInfo | player_info | 54193.0ms
| NamedEntitySpawn | named_entity_spawn | 54196.0ms
| EntityMetadata | entity_metadata | 54199.0ms
| EntityUpdateAttributes | entity_update_attributes | 54202.0ms
| Chat | chat | 54595.0ms
| PlayerInfo | player_info | 54597.0ms
| NamedEntitySpawn | named_entity_spawn | 54600.0ms
| EntityMetadata | entity_metadata | 54603.0ms
| EntityUpdateAttributes | entity_update_attributes | 54605.0ms
| Chat | chat | 54724.0ms
| PlayerInfo | player_info | 54726.0ms
| NamedEntitySpawn | named_entity_spawn | 54729.0ms
| EntityMetadata | entity_metadata | 54731.0ms
| EntityUpdateAttributes | entity_update_attributes | 54734.0ms
| Chat | chat | 54979.0ms
| PlayerInfo | player_info | 54982.0ms
| NamedEntitySpawn | named_entity_spawn | 54984.0ms
| EntityMetadata | entity_metadata | 54987.0ms
| EntityUpdateAttributes | entity_update_attributes | 54989.0ms
| Chat | chat | 55080.0ms
| Advancements | advancements | 55206.0ms
| UpdateHealth | update_health | 55208.0ms
| Experience | experience | 55210.0ms
| DeclareCommands | declare_commands | 55317.0ms
| EntityTeleport | entity_teleport | 55706.0ms
| EntityTeleport | entity_teleport | 55708.0ms
| EntityTeleport | entity_teleport | 55710.0ms
| EntityTeleport | entity_teleport | 55713.0ms
| EntityTeleport | entity_teleport | 55717.0ms
| EntityTeleport | entity_teleport | 55719.0ms
| EntityTeleport | entity_teleport | 55722.0ms
| EntityTeleport | entity_teleport | 55724.0ms
| EntityTeleport | entity_teleport | 55726.0ms
| EntityTeleport | entity_teleport | 55728.0ms
| EntityTeleport | entity_teleport | 55732.0ms
| EntityTeleport | entity_teleport | 59999.0ms
| EntityStatus | entity_status | 60047.0ms
| EntityMetadata | entity_metadata | 60049.0ms
| EntityMetadata | entity_metadata | 60584.0ms
| EntityStatus | entity_status | 60586.0ms
| EntityMetadata | entity_metadata | 60604.0ms
| EntityMetadata | entity_metadata | 61140.0ms
| EntityStatus | entity_status | 61142.0ms
| EntityMetadata | entity_metadata | 61145.0ms
| EntityMetadata | entity_metadata | 61147.0ms
| EntityStatus | entity_status | 61149.0ms
| EntityMetadata | entity_metadata | 61151.0ms
| EntityMetadata | entity_metadata | 61156.0ms
| EntityStatus | entity_status | 61158.0ms
| EntityMetadata | entity_metadata | 61161.0ms
| EntityMetadata | entity_metadata | 61164.0ms
| EntityStatus | entity_status | 61166.0ms
| EntityMetadata | entity_metadata | 61168.0ms
| EntityDestroy | entity_destroy | 61170.0ms
| PlayerInfo | player_info | 61172.0ms
| Chat | chat | 61175.0ms
| EntityDestroy | entity_destroy | 61177.0ms
| PlayerInfo | player_info | 61179.0ms
| Chat | chat | 61181.0ms
| EntityDestroy | entity_destroy | 61183.0ms
| PlayerInfo | player_info | 61185.0ms
| Chat | chat | 61187.0ms
| EntityDestroy | entity_destroy | 61189.0ms
| PlayerInfo | player_info | 61192.0ms
| Chat | chat | 61194.0ms
| EntityDestroy | entity_destroy | 61196.0ms
| PlayerInfo | player_info | 61198.0ms
| Chat | chat | 61200.0ms
| KickDisconnect | kick_disconnect | 61202.0ms
