1.14/README.md
### 1.14, 114_
- Started: `2022-09-03T12:07:40.279Z`
- Username: `114_`

| Packet Normalized | Packet Name | Time |
|---|---|---|
| Compress | compress | 439.0ms
| Success | success | 443.0ms
| CustomPayload | custom_payload | 767.0ms
| CustomPayload | custom_payload | 770.0ms
| Login | login | 773.0ms
| CustomPayload | custom_payload | 776.0ms
| Difficulty | difficulty | 778.0ms
| Abilities | abilities | 781.0ms
| HeldItemSlot | held_item_slot | 783.0ms
| DeclareRecipes | declare_recipes | 1430.0ms
| Tags | tags | 1597.0ms
| EntityStatus | entity_status | 1603.0ms
| Position | position | 1612.0ms
| Chat | chat | 1657.0ms
| PlayerInfo | player_info | 1663.0ms
| PlayerInfo | player_info | 1666.0ms
| PlayerInfo | player_info | 1670.0ms
| PlayerInfo | player_info | 1673.0ms
| PlayerInfo | player_info | 1677.0ms
| PlayerInfo | player_info | 1681.0ms
| UpdateViewDistance | update_view_distance | 1685.0ms
| UpdateViewPosition | update_view_position | 1688.0ms
| NamedEntitySpawn | named_entity_spawn | 1695.0ms
| EntityMetadata | entity_metadata | 1700.0ms
| EntityUpdateAttributes | entity_update_attributes | 1704.0ms
| NamedEntitySpawn | named_entity_spawn | 1708.0ms
| EntityMetadata | entity_metadata | 1711.0ms
| EntityUpdateAttributes | entity_update_attributes | 1714.0ms
| SpawnEntityLiving | spawn_entity_living | 1719.0ms
| EntityMetadata | entity_metadata | 1723.0ms
| EntityUpdateAttributes | entity_update_attributes | 1726.0ms
| NamedEntitySpawn | named_entity_spawn | 1729.0ms
| EntityMetadata | entity_metadata | 1732.0ms
| EntityUpdateAttributes | entity_update_attributes | 1736.0ms
| NamedEntitySpawn | named_entity_spawn | 1739.0ms
| EntityMetadata | entity_metadata | 1743.0ms
| EntityUpdateAttributes | entity_update_attributes | 1746.0ms
| SpawnEntity | spawn_entity | 1750.0ms
| EntityMetadata | entity_metadata | 1753.0ms
| EntityMetadata | entity_metadata | 1758.0ms
| WorldBorder | world_border | 1763.0ms
| SpawnPosition | spawn_position | 1768.0ms
| WindowItems | window_items | 1772.0ms
| SetSlot | set_slot | 1776.0ms
| Transaction | transaction | 1779.0ms
| UpdateHealth | update_health | 1783.0ms
| Experience | experience | 1787.0ms
| UpdateLight | update_light | 1859.0ms
| UpdateLight | update_light | 1896.0ms
| EntityUpdateAttributes | entity_update_attributes | 1900.0ms
| UpdateLight | update_light | 1959.0ms
| Advancements | advancements | 1983.0ms
| UpdateLight | update_light | 2013.0ms
| NamedSoundEffect | named_sound_effect | 2021.0ms
| NamedSoundEffect | named_sound_effect | 2023.0ms
| DeclareCommands | declare_commands | 2041.0ms
| UpdateLight | update_light | 2098.0ms
| UpdateLight | update_light | 2103.0ms
| UpdateLight | update_light | 2144.0ms
| UpdateLight | update_light | 2176.0ms
| UpdateLight | update_light | 2208.0ms
| UpdateLight | update_light | 2213.0ms
| NamedSoundEffect | named_sound_effect | 2217.0ms
| UpdateLight | update_light | 2276.0ms
| UpdateLight | update_light | 2308.0ms
| UpdateLight | update_light | 2350.0ms
| UpdateLight | update_light | 2354.0ms
| UpdateLight | update_light | 2358.0ms
| UpdateLight | update_light | 2362.0ms
| UpdateLight | update_light | 2393.0ms
| UpdateLight | update_light | 2397.0ms
| UpdateLight | update_light | 2401.0ms
| UpdateLight | update_light | 2404.0ms
| UpdateLight | update_light | 2435.0ms
| UpdateLight | update_light | 2455.0ms
| UpdateLight | update_light | 2486.0ms
| UpdateLight | update_light | 2518.0ms
| UpdateLight | update_light | 2529.0ms
| UpdateLight | update_light | 2533.0ms
| UpdateLight | update_light | 2538.0ms
| UpdateLight | update_light | 2541.0ms
| UpdateLight | update_light | 2545.0ms
| UpdateLight | update_light | 2549.0ms
| UpdateLight | update_light | 2553.0ms
| UpdateLight | update_light | 2557.0ms
| UpdateLight | update_light | 2562.0ms
| UpdateLight | update_light | 2565.0ms
| UpdateLight | update_light | 2569.0ms
| UpdateLight | update_light | 2573.0ms
| UpdateLight | update_light | 2606.0ms
| NamedSoundEffect | named_sound_effect | 2612.0ms
| NamedSoundEffect | named_sound_effect | 2614.0ms
| UpdateLight | update_light | 2617.0ms
| UpdateLight | update_light | 2620.0ms
| UpdateLight | update_light | 2624.0ms
| UpdateLight | update_light | 2628.0ms
| UpdateLight | update_light | 2632.0ms
| UpdateLight | update_light | 2636.0ms
| UpdateLight | update_light | 2640.0ms
| UpdateLight | update_light | 2643.0ms
| UpdateLight | update_light | 2647.0ms
| UpdateLight | update_light | 2651.0ms
| UpdateLight | update_light | 2655.0ms
| UpdateLight | update_light | 2659.0ms
| UpdateLight | update_light | 2663.0ms
| UpdateLight | update_light | 2667.0ms
| UpdateLight | update_light | 2671.0ms
| UpdateLight | update_light | 2676.0ms
| UpdateLight | update_light | 2679.0ms
| UpdateLight | update_light | 2684.0ms
| UpdateLight | update_light | 2688.0ms
| UpdateLight | update_light | 2691.0ms
| UpdateLight | update_light | 2695.0ms
| UpdateLight | update_light | 2699.0ms
| UpdateLight | update_light | 2703.0ms
| UpdateLight | update_light | 2707.0ms
| UpdateLight | update_light | 2711.0ms
| UpdateLight | update_light | 2714.0ms
| UpdateLight | update_light | 2718.0ms
| UpdateLight | update_light | 2722.0ms
| NamedSoundEffect | named_sound_effect | 2726.0ms
| UpdateLight | update_light | 2728.0ms
| UpdateLight | update_light | 2732.0ms
| UpdateLight | update_light | 2736.0ms
| UpdateLight | update_light | 2740.0ms
| UpdateLight | update_light | 2744.0ms
| UpdateLight | update_light | 2749.0ms
| EntityTeleport | entity_teleport | 2754.0ms
| NamedSoundEffect | named_sound_effect | 2758.0ms
| UpdateLight | update_light | 2762.0ms
| UpdateLight | update_light | 2776.0ms
| UpdateLight | update_light | 2781.0ms
| NamedSoundEffect | named_sound_effect | 2786.0ms
| UpdateLight | update_light | 2789.0ms
| UpdateLight | update_light | 2794.0ms
| UpdateLight | update_light | 2803.0ms
| NamedSoundEffect | named_sound_effect | 2809.0ms
| NamedSoundEffect | named_sound_effect | 2811.0ms
| NamedSoundEffect | named_sound_effect | 2816.0ms
| NamedSoundEffect | named_sound_effect | 2819.0ms
| NamedSoundEffect | named_sound_effect | 2821.0ms
| NamedSoundEffect | named_sound_effect | 2823.0ms
| NamedSoundEffect | named_sound_effect | 2826.0ms
| NamedSoundEffect | named_sound_effect | 2867.0ms
| NamedSoundEffect | named_sound_effect | 3207.0ms
| NamedSoundEffect | named_sound_effect | 3264.0ms
| NamedSoundEffect | named_sound_effect | 3314.0ms
| NamedSoundEffect | named_sound_effect | 3623.0ms
| NamedSoundEffect | named_sound_effect | 3627.0ms
| NamedSoundEffect | named_sound_effect | 4053.0ms
| NamedSoundEffect | named_sound_effect | 4080.0ms
| NamedSoundEffect | named_sound_effect | 4199.0ms
| NamedSoundEffect | named_sound_effect | 4369.0ms
| NamedSoundEffect | named_sound_effect | 4521.0ms
| NamedSoundEffect | named_sound_effect | 4767.0ms
| NamedSoundEffect | named_sound_effect | 4964.0ms
| NamedSoundEffect | named_sound_effect | 5065.0ms
| NamedSoundEffect | named_sound_effect | 5117.0ms
| NamedSoundEffect | named_sound_effect | 5555.0ms
| NamedSoundEffect | named_sound_effect | 5557.0ms
| NamedSoundEffect | named_sound_effect | 5560.0ms
| PlayerInfo | player_info | 6036.0ms
| Chat | chat | 6128.0ms
| PlayerInfo | player_info | 6131.0ms
| NamedEntitySpawn | named_entity_spawn | 6135.0ms
| EntityMetadata | entity_metadata | 6138.0ms
| EntityUpdateAttributes | entity_update_attributes | 6141.0ms
| EntityTeleport | entity_teleport | 6144.0ms
| EntityUpdateAttributes | entity_update_attributes | 6160.0ms
| EntityTeleport | entity_teleport | 6533.0ms
| NamedSoundEffect | named_sound_effect | 6535.0ms
| NamedSoundEffect | named_sound_effect | 6538.0ms
| PlayerInfo | player_info | 6542.0ms
| NamedSoundEffect | named_sound_effect | 6546.0ms
| NamedSoundEffect | named_sound_effect | 6607.0ms
| NamedSoundEffect | named_sound_effect | 6612.0ms
| NamedSoundEffect | named_sound_effect | 6879.0ms
| NamedSoundEffect | named_sound_effect | 7014.0ms
| NamedSoundEffect | named_sound_effect | 7294.0ms
| NamedSoundEffect | named_sound_effect | 7402.0ms
| EntityLook | entity_look | 7405.0ms
| NamedSoundEffect | named_sound_effect | 7451.0ms
| NamedSoundEffect | named_sound_effect | 7461.0ms
| NamedSoundEffect | named_sound_effect | 7464.0ms
| NamedSoundEffect | named_sound_effect | 7536.0ms
| NamedSoundEffect | named_sound_effect | 7584.0ms
| NamedSoundEffect | named_sound_effect | 7675.0ms
| NamedSoundEffect | named_sound_effect | 8023.0ms
| NamedSoundEffect | named_sound_effect | 8156.0ms
| NamedSoundEffect | named_sound_effect | 8219.0ms
| NamedSoundEffect | named_sound_effect | 8222.0ms
| NamedSoundEffect | named_sound_effect | 8317.0ms
| NamedSoundEffect | named_sound_effect | 8525.0ms
| NamedSoundEffect | named_sound_effect | 8575.0ms
| NamedSoundEffect | named_sound_effect | 8865.0ms
| NamedSoundEffect | named_sound_effect | 9019.0ms
| NamedSoundEffect | named_sound_effect | 9072.0ms
| NamedSoundEffect | named_sound_effect | 9168.0ms
| NamedSoundEffect | named_sound_effect | 9418.0ms
| NamedSoundEffect | named_sound_effect | 9464.0ms
| NamedSoundEffect | named_sound_effect | 9545.0ms
| NamedSoundEffect | named_sound_effect | 9875.0ms
| NamedSoundEffect | named_sound_effect | 9931.0ms
| NamedSoundEffect | named_sound_effect | 9958.0ms
| EntityTeleport | entity_teleport | 10025.0ms
| NamedSoundEffect | named_sound_effect | 10168.0ms
| NamedSoundEffect | named_sound_effect | 10384.0ms
| EntityLook | entity_look | 10458.0ms
| NamedSoundEffect | named_sound_effect | 10519.0ms
| NamedSoundEffect | named_sound_effect | 10521.0ms
| NamedSoundEffect | named_sound_effect | 10732.0ms
| PlayerInfo | player_info | 10965.0ms
| Chat | chat | 11201.0ms
| PlayerInfo | player_info | 11204.0ms
| NamedEntitySpawn | named_entity_spawn | 11207.0ms
| EntityMetadata | entity_metadata | 11210.0ms
| EntityUpdateAttributes | entity_update_attributes | 11213.0ms
| EntityTeleport | entity_teleport | 11215.0ms
| EntityUpdateAttributes | entity_update_attributes | 11218.0ms
| NamedSoundEffect | named_sound_effect | 11220.0ms
| NamedSoundEffect | named_sound_effect | 11225.0ms
| EntityTeleport | entity_teleport | 11227.0ms
| NamedSoundEffect | named_sound_effect | 11292.0ms
| NamedSoundEffect | named_sound_effect | 11295.0ms
| NamedSoundEffect | named_sound_effect | 11387.0ms
| NamedSoundEffect | named_sound_effect | 11488.0ms
| NamedSoundEffect | named_sound_effect | 11503.0ms
| NamedSoundEffect | named_sound_effect | 11533.0ms
| NamedSoundEffect | named_sound_effect | 11535.0ms
| NamedSoundEffect | named_sound_effect | 11729.0ms
| NamedSoundEffect | named_sound_effect | 11853.0ms
| NamedSoundEffect | named_sound_effect | 11938.0ms
| NamedSoundEffect | named_sound_effect | 12084.0ms
| NamedSoundEffect | named_sound_effect | 12130.0ms
| NamedSoundEffect | named_sound_effect | 12300.0ms
| NamedSoundEffect | named_sound_effect | 12377.0ms
| NamedSoundEffect | named_sound_effect | 12418.0ms
| NamedSoundEffect | named_sound_effect | 12421.0ms
| NamedSoundEffect | named_sound_effect | 12464.0ms
| NamedSoundEffect | named_sound_effect | 12473.0ms
| NamedSoundEffect | named_sound_effect | 12689.0ms
| NamedSoundEffect | named_sound_effect | 12777.0ms
| EntityTeleport | entity_teleport | 12831.0ms
| NamedSoundEffect | named_sound_effect | 12943.0ms
| NamedSoundEffect | named_sound_effect | 12960.0ms
| NamedSoundEffect | named_sound_effect | 12962.0ms
| NamedSoundEffect | named_sound_effect | 13002.0ms
| NamedSoundEffect | named_sound_effect | 13214.0ms
| NamedSoundEffect | named_sound_effect | 13261.0ms
| NamedSoundEffect | named_sound_effect | 13303.0ms
| NamedSoundEffect | named_sound_effect | 13331.0ms
| NamedSoundEffect | named_sound_effect | 13422.0ms
| NamedSoundEffect | named_sound_effect | 13521.0ms
| NamedSoundEffect | named_sound_effect | 13677.0ms
| NamedSoundEffect | named_sound_effect | 13784.0ms
| NamedSoundEffect | named_sound_effect | 13787.0ms
| NamedSoundEffect | named_sound_effect | 13831.0ms
| NamedSoundEffect | named_sound_effect | 13921.0ms
| NamedSoundEffect | named_sound_effect | 14174.0ms
| NamedSoundEffect | named_sound_effect | 14226.0ms
| NamedSoundEffect | named_sound_effect | 14263.0ms
| NamedSoundEffect | named_sound_effect | 14292.0ms
| NamedSoundEffect | named_sound_effect | 14391.0ms
| NamedSoundEffect | named_sound_effect | 14533.0ms
| NamedSoundEffect | named_sound_effect | 14649.0ms
| NamedSoundEffect | named_sound_effect | 14720.0ms
| NamedSoundEffect | named_sound_effect | 14722.0ms
| NamedSoundEffect | named_sound_effect | 14781.0ms
| NamedSoundEffect | named_sound_effect | 14963.0ms
| NamedSoundEffect | named_sound_effect | 15063.0ms
| NamedSoundEffect | named_sound_effect | 15179.0ms
| NamedSoundEffect | named_sound_effect | 15182.0ms
| NamedSoundEffect | named_sound_effect | 15279.0ms
| NamedSoundEffect | named_sound_effect | 15325.0ms
| EntityTeleport | entity_teleport | 15377.0ms
| NamedSoundEffect | named_sound_effect | 15379.0ms
| KeepAlive | keep_alive | 15511.0ms
| NamedSoundEffect | named_sound_effect | 15629.0ms
| NamedSoundEffect | named_sound_effect | 15786.0ms
| NamedSoundEffect | named_sound_effect | 15791.0ms
| NamedSoundEffect | named_sound_effect | 15794.0ms
| PlayerInfo | player_info | 16094.0ms
| Chat | chat | 16526.0ms
| PlayerInfo | player_info | 16529.0ms
| NamedEntitySpawn | named_entity_spawn | 16531.0ms
| EntityMetadata | entity_metadata | 16534.0ms
| EntityUpdateAttributes | entity_update_attributes | 16536.0ms
| EntityTeleport | entity_teleport | 16539.0ms
| EntityUpdateAttributes | entity_update_attributes | 16541.0ms
| NamedSoundEffect | named_sound_effect | 16543.0ms
| EntityTeleport | entity_teleport | 16546.0ms
| NamedSoundEffect | named_sound_effect | 16548.0ms
| NamedSoundEffect | named_sound_effect | 16551.0ms
| NamedSoundEffect | named_sound_effect | 16602.0ms
| NamedSoundEffect | named_sound_effect | 16604.0ms
| NamedSoundEffect | named_sound_effect | 16607.0ms
| NamedSoundEffect | named_sound_effect | 16612.0ms
| NamedSoundEffect | named_sound_effect | 16614.0ms
| NamedSoundEffect | named_sound_effect | 16617.0ms
| NamedSoundEffect | named_sound_effect | 16619.0ms
| NamedSoundEffect | named_sound_effect | 16724.0ms
| NamedSoundEffect | named_sound_effect | 16727.0ms
| NamedSoundEffect | named_sound_effect | 16771.0ms
| NamedSoundEffect | named_sound_effect | 16821.0ms
| NamedSoundEffect | named_sound_effect | 16830.0ms
| NamedSoundEffect | named_sound_effect | 16832.0ms
| NamedSoundEffect | named_sound_effect | 16999.0ms
| NamedSoundEffect | named_sound_effect | 17142.0ms
| NamedSoundEffect | named_sound_effect | 17144.0ms
| NamedSoundEffect | named_sound_effect | 17177.0ms
| NamedSoundEffect | named_sound_effect | 17219.0ms
| NamedSoundEffect | named_sound_effect | 17326.0ms
| NamedSoundEffect | named_sound_effect | 17399.0ms
| NamedSoundEffect | named_sound_effect | 17402.0ms
| NamedSoundEffect | named_sound_effect | 17664.0ms
| NamedSoundEffect | named_sound_effect | 17675.0ms
| NamedSoundEffect | named_sound_effect | 17696.0ms
| NamedSoundEffect | named_sound_effect | 17717.0ms
| NamedSoundEffect | named_sound_effect | 17755.0ms
| NamedSoundEffect | named_sound_effect | 17825.0ms
| NamedSoundEffect | named_sound_effect | 17917.0ms
| NamedSoundEffect | named_sound_effect | 17943.0ms
| NamedSoundEffect | named_sound_effect | 17946.0ms
| NamedSoundEffect | named_sound_effect | 18242.0ms
| NamedSoundEffect | named_sound_effect | 18277.0ms
| NamedSoundEffect | named_sound_effect | 18279.0ms
| NamedSoundEffect | named_sound_effect | 18284.0ms
| EntityLook | entity_look | 18286.0ms
| NamedSoundEffect | named_sound_effect | 18288.0ms
| NamedSoundEffect | named_sound_effect | 18354.0ms
| NamedSoundEffect | named_sound_effect | 18426.0ms
| NamedSoundEffect | named_sound_effect | 18687.0ms
| NamedSoundEffect | named_sound_effect | 18691.0ms
| NamedSoundEffect | named_sound_effect | 18694.0ms
| NamedSoundEffect | named_sound_effect | 18696.0ms
| NamedSoundEffect | named_sound_effect | 18700.0ms
| NamedSoundEffect | named_sound_effect | 18811.0ms
| NamedSoundEffect | named_sound_effect | 18920.0ms
| NamedSoundEffect | named_sound_effect | 18961.0ms
| NamedSoundEffect | named_sound_effect | 18973.0ms
| NamedSoundEffect | named_sound_effect | 19049.0ms
| NamedSoundEffect | named_sound_effect | 19052.0ms
| NamedSoundEffect | named_sound_effect | 19187.0ms
| NamedSoundEffect | named_sound_effect | 19235.0ms
| NamedSoundEffect | named_sound_effect | 19239.0ms
| NamedSoundEffect | named_sound_effect | 19375.0ms
| NamedSoundEffect | named_sound_effect | 19423.0ms
| NamedSoundEffect | named_sound_effect | 19467.0ms
| NamedSoundEffect | named_sound_effect | 19541.0ms
| NamedSoundEffect | named_sound_effect | 19574.0ms
| NamedSoundEffect | named_sound_effect | 19731.0ms
| NamedSoundEffect | named_sound_effect | 19733.0ms
| NamedSoundEffect | named_sound_effect | 19838.0ms
| NamedSoundEffect | named_sound_effect | 19903.0ms
| NamedSoundEffect | named_sound_effect | 19906.0ms
| NamedSoundEffect | named_sound_effect | 19921.0ms
| NamedSoundEffect | named_sound_effect | 19965.0ms
| NamedSoundEffect | named_sound_effect | 20062.0ms
| NamedSoundEffect | named_sound_effect | 20166.0ms
| NamedSoundEffect | named_sound_effect | 20283.0ms
| NamedSoundEffect | named_sound_effect | 20286.0ms
| NamedSoundEffect | named_sound_effect | 20288.0ms
| NamedSoundEffect | named_sound_effect | 20470.0ms
| NamedSoundEffect | named_sound_effect | 20518.0ms
| NamedSoundEffect | named_sound_effect | 20535.0ms
| NamedSoundEffect | named_sound_effect | 20595.0ms
| NamedSoundEffect | named_sound_effect | 20724.0ms
| NamedSoundEffect | named_sound_effect | 20729.0ms
| EntityLook | entity_look | 20847.0ms
| NamedSoundEffect | named_sound_effect | 20849.0ms
| NamedSoundEffect | named_sound_effect | 20852.0ms
| NamedSoundEffect | named_sound_effect | 20908.0ms
| NamedSoundEffect | named_sound_effect | 20960.0ms
| PlayerInfo | player_info | 21210.0ms
| Chat | chat | 21420.0ms
| PlayerInfo | player_info | 21422.0ms
| NamedEntitySpawn | named_entity_spawn | 21424.0ms
| EntityMetadata | entity_metadata | 21427.0ms
| EntityUpdateAttributes | entity_update_attributes | 21429.0ms
| EntityTeleport | entity_teleport | 21432.0ms
| EntityUpdateAttributes | entity_update_attributes | 21434.0ms
| NamedSoundEffect | named_sound_effect | 21436.0ms
| EntityTeleport | entity_teleport | 21438.0ms
| NamedSoundEffect | named_sound_effect | 21585.0ms
| NamedSoundEffect | named_sound_effect | 21588.0ms
| NamedSoundEffect | named_sound_effect | 21590.0ms
| NamedSoundEffect | named_sound_effect | 21593.0ms
| NamedSoundEffect | named_sound_effect | 21595.0ms
| NamedSoundEffect | named_sound_effect | 21598.0ms
| NamedSoundEffect | named_sound_effect | 21603.0ms
| NamedSoundEffect | named_sound_effect | 21605.0ms
| NamedSoundEffect | named_sound_effect | 21608.0ms
| NamedSoundEffect | named_sound_effect | 21610.0ms
| NamedSoundEffect | named_sound_effect | 21806.0ms
| NamedSoundEffect | named_sound_effect | 21809.0ms
| NamedSoundEffect | named_sound_effect | 21813.0ms
| NamedSoundEffect | named_sound_effect | 21816.0ms
| NamedSoundEffect | named_sound_effect | 21856.0ms
| NamedSoundEffect | named_sound_effect | 21886.0ms
| NamedSoundEffect | named_sound_effect | 21937.0ms
| NamedSoundEffect | named_sound_effect | 21942.0ms
| NamedSoundEffect | named_sound_effect | 21970.0ms
| NamedSoundEffect | named_sound_effect | 21972.0ms
| NamedSoundEffect | named_sound_effect | 22032.0ms
| NamedSoundEffect | named_sound_effect | 22112.0ms
| NamedSoundEffect | named_sound_effect | 22143.0ms
| NamedSoundEffect | named_sound_effect | 22181.0ms
| NamedSoundEffect | named_sound_effect | 22347.0ms
| NamedSoundEffect | named_sound_effect | 22443.0ms
| NamedSoundEffect | named_sound_effect | 22521.0ms
| NamedSoundEffect | named_sound_effect | 22524.0ms
| NamedSoundEffect | named_sound_effect | 22526.0ms
| NamedSoundEffect | named_sound_effect | 22530.0ms
| NamedSoundEffect | named_sound_effect | 22580.0ms
| NamedSoundEffect | named_sound_effect | 22657.0ms
| NamedSoundEffect | named_sound_effect | 22722.0ms
| NamedSoundEffect | named_sound_effect | 22725.0ms
| NamedSoundEffect | named_sound_effect | 22727.0ms
| NamedSoundEffect | named_sound_effect | 22731.0ms
| NamedSoundEffect | named_sound_effect | 22775.0ms
| NamedSoundEffect | named_sound_effect | 22885.0ms
| NamedSoundEffect | named_sound_effect | 23008.0ms
| NamedSoundEffect | named_sound_effect | 23010.0ms
| NamedSoundEffect | named_sound_effect | 23040.0ms
| NamedSoundEffect | named_sound_effect | 23118.0ms
| NamedSoundEffect | named_sound_effect | 23123.0ms
| NamedSoundEffect | named_sound_effect | 23182.0ms
| NamedSoundEffect | named_sound_effect | 23184.0ms
| NamedSoundEffect | named_sound_effect | 23224.0ms
| NamedSoundEffect | named_sound_effect | 23260.0ms
| NamedSoundEffect | named_sound_effect | 23409.0ms
| NamedSoundEffect | named_sound_effect | 23467.0ms
| NamedSoundEffect | named_sound_effect | 23517.0ms
| NamedSoundEffect | named_sound_effect | 23570.0ms
| NamedSoundEffect | named_sound_effect | 23594.0ms
| NamedSoundEffect | named_sound_effect | 23598.0ms
| NamedSoundEffect | named_sound_effect | 23600.0ms
| NamedSoundEffect | named_sound_effect | 23651.0ms
| NamedSoundEffect | named_sound_effect | 23770.0ms
| NamedSoundEffect | named_sound_effect | 23813.0ms
| NamedSoundEffect | named_sound_effect | 23875.0ms
| NamedSoundEffect | named_sound_effect | 23909.0ms
| NamedSoundEffect | named_sound_effect | 23960.0ms
| NamedSoundEffect | named_sound_effect | 23989.0ms
| NamedSoundEffect | named_sound_effect | 24021.0ms
| NamedSoundEffect | named_sound_effect | 24078.0ms
| NamedSoundEffect | named_sound_effect | 24128.0ms
| NamedSoundEffect | named_sound_effect | 24163.0ms
| NamedSoundEffect | named_sound_effect | 24313.0ms
| NamedSoundEffect | named_sound_effect | 24383.0ms
| NamedSoundEffect | named_sound_effect | 24387.0ms
| NamedSoundEffect | named_sound_effect | 24391.0ms
| NamedSoundEffect | named_sound_effect | 24394.0ms
| NamedSoundEffect | named_sound_effect | 24506.0ms
| NamedSoundEffect | named_sound_effect | 24536.0ms
| NamedSoundEffect | named_sound_effect | 24562.0ms
| NamedSoundEffect | named_sound_effect | 24625.0ms
| NamedSoundEffect | named_sound_effect | 24740.0ms
| NamedSoundEffect | named_sound_effect | 24785.0ms
| NamedSoundEffect | named_sound_effect | 24799.0ms
| NamedSoundEffect | named_sound_effect | 24801.0ms
| NamedSoundEffect | named_sound_effect | 24852.0ms
| NamedSoundEffect | named_sound_effect | 24856.0ms
| NamedSoundEffect | named_sound_effect | 25057.0ms
| NamedSoundEffect | named_sound_effect | 25060.0ms
| NamedSoundEffect | named_sound_effect | 25110.0ms
| NamedSoundEffect | named_sound_effect | 25147.0ms
| NamedSoundEffect | named_sound_effect | 25163.0ms
| NamedSoundEffect | named_sound_effect | 25239.0ms
| NamedSoundEffect | named_sound_effect | 25242.0ms
| NamedSoundEffect | named_sound_effect | 25329.0ms
| NamedSoundEffect | named_sound_effect | 25334.0ms
| NamedSoundEffect | named_sound_effect | 25360.0ms
| NamedSoundEffect | named_sound_effect | 25529.0ms
| NamedSoundEffect | named_sound_effect | 25571.0ms
| NamedSoundEffect | named_sound_effect | 25575.0ms
| NamedSoundEffect | named_sound_effect | 25648.0ms
| NamedSoundEffect | named_sound_effect | 25680.0ms
| NamedSoundEffect | named_sound_effect | 25683.0ms
| NamedSoundEffect | named_sound_effect | 25754.0ms
| NamedSoundEffect | named_sound_effect | 25756.0ms
| NamedSoundEffect | named_sound_effect | 25812.0ms
| EntityTeleport | entity_teleport | 25974.0ms
| NamedSoundEffect | named_sound_effect | 25977.0ms
| NamedSoundEffect | named_sound_effect | 25981.0ms
| NamedSoundEffect | named_sound_effect | 26098.0ms
| EntityLook | entity_look | 26101.0ms
| NamedSoundEffect | named_sound_effect | 26104.0ms
| NamedSoundEffect | named_sound_effect | 26200.0ms
| NamedSoundEffect | named_sound_effect | 26205.0ms
| PlayerInfo | player_info | 26208.0ms
| NamedSoundEffect | named_sound_effect | 26496.0ms
| NamedSoundEffect | named_sound_effect | 26499.0ms
| Chat | chat | 26927.0ms
| PlayerInfo | player_info | 26929.0ms
| NamedEntitySpawn | named_entity_spawn | 26932.0ms
| EntityMetadata | entity_metadata | 26935.0ms
| EntityUpdateAttributes | entity_update_attributes | 26938.0ms
| EntityTeleport | entity_teleport | 26941.0ms
| EntityUpdateAttributes | entity_update_attributes | 26944.0ms
| NamedSoundEffect | named_sound_effect | 26946.0ms
| EntityTeleport | entity_teleport | 26949.0ms
| NamedSoundEffect | named_sound_effect | 26951.0ms
| NamedSoundEffect | named_sound_effect | 26956.0ms
| NamedSoundEffect | named_sound_effect | 26959.0ms
| NamedSoundEffect | named_sound_effect | 26962.0ms
| NamedSoundEffect | named_sound_effect | 26965.0ms
| NamedSoundEffect | named_sound_effect | 26967.0ms
| NamedSoundEffect | named_sound_effect | 26972.0ms
| NamedSoundEffect | named_sound_effect | 26975.0ms
| NamedSoundEffect | named_sound_effect | 27298.0ms
| NamedSoundEffect | named_sound_effect | 27305.0ms
| NamedSoundEffect | named_sound_effect | 27414.0ms
| NamedSoundEffect | named_sound_effect | 27424.0ms
| NamedSoundEffect | named_sound_effect | 27429.0ms
| NamedSoundEffect | named_sound_effect | 27431.0ms
| NamedSoundEffect | named_sound_effect | 27434.0ms
| NamedSoundEffect | named_sound_effect | 27438.0ms
| NamedSoundEffect | named_sound_effect | 27441.0ms
| NamedSoundEffect | named_sound_effect | 27444.0ms
| NamedSoundEffect | named_sound_effect | 27446.0ms
| NamedSoundEffect | named_sound_effect | 27451.0ms
| NamedSoundEffect | named_sound_effect | 27455.0ms
| NamedSoundEffect | named_sound_effect | 27458.0ms
| NamedSoundEffect | named_sound_effect | 27461.0ms
| NamedSoundEffect | named_sound_effect | 27799.0ms
| NamedSoundEffect | named_sound_effect | 27802.0ms
| NamedSoundEffect | named_sound_effect | 27805.0ms
| NamedSoundEffect | named_sound_effect | 27808.0ms
| NamedSoundEffect | named_sound_effect | 27811.0ms
| NamedSoundEffect | named_sound_effect | 27814.0ms
| NamedSoundEffect | named_sound_effect | 27819.0ms
| NamedSoundEffect | named_sound_effect | 27822.0ms
| NamedSoundEffect | named_sound_effect | 27825.0ms
| NamedSoundEffect | named_sound_effect | 27829.0ms
| NamedSoundEffect | named_sound_effect | 27832.0ms
| NamedSoundEffect | named_sound_effect | 27974.0ms
| NamedSoundEffect | named_sound_effect | 27977.0ms
| NamedSoundEffect | named_sound_effect | 27980.0ms
| NamedSoundEffect | named_sound_effect | 27983.0ms
| NamedSoundEffect | named_sound_effect | 28088.0ms
| NamedSoundEffect | named_sound_effect | 28091.0ms
| NamedSoundEffect | named_sound_effect | 28095.0ms
| NamedSoundEffect | named_sound_effect | 28098.0ms
| NamedSoundEffect | named_sound_effect | 28210.0ms
| NamedSoundEffect | named_sound_effect | 28213.0ms
| NamedSoundEffect | named_sound_effect | 28216.0ms
| NamedSoundEffect | named_sound_effect | 28320.0ms
| NamedSoundEffect | named_sound_effect | 28323.0ms
| NamedSoundEffect | named_sound_effect | 28325.0ms
| NamedSoundEffect | named_sound_effect | 28328.0ms
| NamedSoundEffect | named_sound_effect | 28475.0ms
| NamedSoundEffect | named_sound_effect | 28480.0ms
| NamedSoundEffect | named_sound_effect | 28544.0ms
| NamedSoundEffect | named_sound_effect | 28546.0ms
| NamedSoundEffect | named_sound_effect | 28548.0ms
| NamedSoundEffect | named_sound_effect | 28632.0ms
| NamedSoundEffect | named_sound_effect | 28634.0ms
| NamedSoundEffect | named_sound_effect | 28637.0ms
| NamedSoundEffect | named_sound_effect | 28885.0ms
| NamedSoundEffect | named_sound_effect | 28889.0ms
| NamedSoundEffect | named_sound_effect | 28891.0ms
| NamedSoundEffect | named_sound_effect | 28894.0ms
| NamedSoundEffect | named_sound_effect | 28896.0ms
| NamedSoundEffect | named_sound_effect | 29003.0ms
| NamedSoundEffect | named_sound_effect | 29013.0ms
| NamedSoundEffect | named_sound_effect | 29143.0ms
| NamedSoundEffect | named_sound_effect | 29145.0ms
| NamedSoundEffect | named_sound_effect | 29149.0ms
| NamedSoundEffect | named_sound_effect | 29151.0ms
| NamedSoundEffect | named_sound_effect | 29153.0ms
| NamedSoundEffect | named_sound_effect | 29156.0ms
| NamedSoundEffect | named_sound_effect | 29250.0ms
| NamedSoundEffect | named_sound_effect | 29252.0ms
| NamedSoundEffect | named_sound_effect | 29372.0ms
| NamedSoundEffect | named_sound_effect | 29374.0ms
| NamedSoundEffect | named_sound_effect | 29439.0ms
| NamedSoundEffect | named_sound_effect | 29442.0ms
| NamedSoundEffect | named_sound_effect | 29444.0ms
| NamedSoundEffect | named_sound_effect | 29499.0ms
| NamedSoundEffect | named_sound_effect | 29514.0ms
| NamedSoundEffect | named_sound_effect | 29677.0ms
| NamedSoundEffect | named_sound_effect | 29680.0ms
| NamedSoundEffect | named_sound_effect | 29682.0ms
| NamedSoundEffect | named_sound_effect | 29752.0ms
| NamedSoundEffect | named_sound_effect | 29754.0ms
| NamedSoundEffect | named_sound_effect | 29816.0ms
| NamedSoundEffect | named_sound_effect | 29819.0ms
| NamedSoundEffect | named_sound_effect | 29885.0ms
| NamedSoundEffect | named_sound_effect | 29927.0ms
| NamedSoundEffect | named_sound_effect | 29987.0ms
| NamedSoundEffect | named_sound_effect | 30035.0ms
| EntityTeleport | entity_teleport | 30071.0ms
| NamedSoundEffect | named_sound_effect | 30101.0ms
| NamedSoundEffect | named_sound_effect | 30177.0ms
| NamedSoundEffect | named_sound_effect | 30179.0ms
| NamedSoundEffect | named_sound_effect | 30226.0ms
| NamedSoundEffect | named_sound_effect | 30229.0ms
| NamedSoundEffect | named_sound_effect | 30262.0ms
| NamedSoundEffect | named_sound_effect | 30325.0ms
| NamedSoundEffect | named_sound_effect | 30362.0ms
| NamedSoundEffect | named_sound_effect | 30386.0ms
| NamedSoundEffect | named_sound_effect | 30389.0ms
| NamedSoundEffect | named_sound_effect | 30464.0ms
| NamedSoundEffect | named_sound_effect | 30577.0ms
| KeepAlive | keep_alive | 30579.0ms
| NamedSoundEffect | named_sound_effect | 30613.0ms
| NamedSoundEffect | named_sound_effect | 30672.0ms
| NamedSoundEffect | named_sound_effect | 30674.0ms
| NamedSoundEffect | named_sound_effect | 30740.0ms
| NamedSoundEffect | named_sound_effect | 30742.0ms
| NamedSoundEffect | named_sound_effect | 30744.0ms
| NamedSoundEffect | named_sound_effect | 30798.0ms
| NamedSoundEffect | named_sound_effect | 30882.0ms
| NamedSoundEffect | named_sound_effect | 30885.0ms
| EntityTeleport | entity_teleport | 30928.0ms
| NamedSoundEffect | named_sound_effect | 31136.0ms
| NamedSoundEffect | named_sound_effect | 31139.0ms
| NamedSoundEffect | named_sound_effect | 31141.0ms
| NamedSoundEffect | named_sound_effect | 31146.0ms
| NamedSoundEffect | named_sound_effect | 31149.0ms
| NamedSoundEffect | named_sound_effect | 31151.0ms
| NamedSoundEffect | named_sound_effect | 31287.0ms
| NamedSoundEffect | named_sound_effect | 31289.0ms
| NamedSoundEffect | named_sound_effect | 31387.0ms
| NamedSoundEffect | named_sound_effect | 31390.0ms
| NamedSoundEffect | named_sound_effect | 31392.0ms
| PlayerInfo | player_info | 31393.0ms
| NamedSoundEffect | named_sound_effect | 31676.0ms
| Chat | chat | 31904.0ms
| PlayerInfo | player_info | 31908.0ms
| NamedEntitySpawn | named_entity_spawn | 31912.0ms
| EntityMetadata | entity_metadata | 31915.0ms
| EntityUpdateAttributes | entity_update_attributes | 31917.0ms
| EntityTeleport | entity_teleport | 31919.0ms
| EntityUpdateAttributes | entity_update_attributes | 31922.0ms
| NamedSoundEffect | named_sound_effect | 31924.0ms
| EntityTeleport | entity_teleport | 31926.0ms
| NamedSoundEffect | named_sound_effect | 31929.0ms
| NamedSoundEffect | named_sound_effect | 31933.0ms
| NamedSoundEffect | named_sound_effect | 31936.0ms
| NamedSoundEffect | named_sound_effect | 31938.0ms
| NamedSoundEffect | named_sound_effect | 31941.0ms
| NamedSoundEffect | named_sound_effect | 31943.0ms
| NamedSoundEffect | named_sound_effect | 32634.0ms
| NamedSoundEffect | named_sound_effect | 32637.0ms
| NamedSoundEffect | named_sound_effect | 32640.0ms
| NamedSoundEffect | named_sound_effect | 32642.0ms
| NamedSoundEffect | named_sound_effect | 32647.0ms
| NamedSoundEffect | named_sound_effect | 32649.0ms
| NamedSoundEffect | named_sound_effect | 32651.0ms
| NamedSoundEffect | named_sound_effect | 32654.0ms
| NamedSoundEffect | named_sound_effect | 32657.0ms
| NamedSoundEffect | named_sound_effect | 32660.0ms
| NamedSoundEffect | named_sound_effect | 32666.0ms
| NamedSoundEffect | named_sound_effect | 32669.0ms
| NamedSoundEffect | named_sound_effect | 32671.0ms
| NamedSoundEffect | named_sound_effect | 32674.0ms
| NamedSoundEffect | named_sound_effect | 32676.0ms
| NamedSoundEffect | named_sound_effect | 32679.0ms
| NamedSoundEffect | named_sound_effect | 32684.0ms
| NamedSoundEffect | named_sound_effect | 32686.0ms
| NamedSoundEffect | named_sound_effect | 32689.0ms
| NamedSoundEffect | named_sound_effect | 32692.0ms
| NamedSoundEffect | named_sound_effect | 32694.0ms
| NamedSoundEffect | named_sound_effect | 32697.0ms
| NamedSoundEffect | named_sound_effect | 32701.0ms
| NamedSoundEffect | named_sound_effect | 32704.0ms
| NamedSoundEffect | named_sound_effect | 33459.0ms
| EntityTeleport | entity_teleport | 33462.0ms
| NamedSoundEffect | named_sound_effect | 33465.0ms
| NamedSoundEffect | named_sound_effect | 33468.0ms
| NamedSoundEffect | named_sound_effect | 33470.0ms
| NamedSoundEffect | named_sound_effect | 33475.0ms
| NamedSoundEffect | named_sound_effect | 33478.0ms
| NamedSoundEffect | named_sound_effect | 33480.0ms
| NamedSoundEffect | named_sound_effect | 33483.0ms
| NamedSoundEffect | named_sound_effect | 33487.0ms
| NamedSoundEffect | named_sound_effect | 33490.0ms
| NamedSoundEffect | named_sound_effect | 33495.0ms
| NamedSoundEffect | named_sound_effect | 33499.0ms
| NamedSoundEffect | named_sound_effect | 33502.0ms
| NamedSoundEffect | named_sound_effect | 33506.0ms
| NamedSoundEffect | named_sound_effect | 33510.0ms
| NamedSoundEffect | named_sound_effect | 33514.0ms
| NamedSoundEffect | named_sound_effect | 33518.0ms
| NamedSoundEffect | named_sound_effect | 33522.0ms
| NamedSoundEffect | named_sound_effect | 33526.0ms
| NamedSoundEffect | named_sound_effect | 33530.0ms
| NamedSoundEffect | named_sound_effect | 33533.0ms
| NamedSoundEffect | named_sound_effect | 33536.0ms
| NamedSoundEffect | named_sound_effect | 33541.0ms
| NamedSoundEffect | named_sound_effect | 34119.0ms
| NamedSoundEffect | named_sound_effect | 34123.0ms
| EntityLook | entity_look | 34126.0ms
| NamedSoundEffect | named_sound_effect | 34129.0ms
| NamedSoundEffect | named_sound_effect | 34133.0ms
| NamedSoundEffect | named_sound_effect | 34137.0ms
| NamedSoundEffect | named_sound_effect | 34140.0ms
| NamedSoundEffect | named_sound_effect | 34143.0ms
| NamedSoundEffect | named_sound_effect | 34146.0ms
| NamedSoundEffect | named_sound_effect | 34151.0ms
| NamedSoundEffect | named_sound_effect | 34156.0ms
| NamedSoundEffect | named_sound_effect | 34161.0ms
| NamedSoundEffect | named_sound_effect | 34165.0ms
| NamedSoundEffect | named_sound_effect | 34169.0ms
| NamedSoundEffect | named_sound_effect | 34172.0ms
| NamedSoundEffect | named_sound_effect | 34176.0ms
| NamedSoundEffect | named_sound_effect | 34180.0ms
| NamedSoundEffect | named_sound_effect | 34601.0ms
| NamedSoundEffect | named_sound_effect | 34604.0ms
| NamedSoundEffect | named_sound_effect | 34608.0ms
| NamedSoundEffect | named_sound_effect | 34613.0ms
| NamedSoundEffect | named_sound_effect | 34616.0ms
| NamedSoundEffect | named_sound_effect | 34619.0ms
| NamedSoundEffect | named_sound_effect | 34622.0ms
| NamedSoundEffect | named_sound_effect | 34625.0ms
| NamedSoundEffect | named_sound_effect | 34627.0ms
| NamedSoundEffect | named_sound_effect | 34632.0ms
| NamedSoundEffect | named_sound_effect | 34634.0ms
| NamedSoundEffect | named_sound_effect | 34980.0ms
| NamedSoundEffect | named_sound_effect | 34983.0ms
| NamedSoundEffect | named_sound_effect | 34986.0ms
| NamedSoundEffect | named_sound_effect | 34988.0ms
| NamedSoundEffect | named_sound_effect | 34991.0ms
| NamedSoundEffect | named_sound_effect | 34994.0ms
| NamedSoundEffect | named_sound_effect | 34998.0ms
| NamedSoundEffect | named_sound_effect | 35001.0ms
| NamedSoundEffect | named_sound_effect | 35004.0ms
| NamedSoundEffect | named_sound_effect | 35007.0ms
| NamedSoundEffect | named_sound_effect | 35222.0ms
| NamedSoundEffect | named_sound_effect | 35224.0ms
| NamedSoundEffect | named_sound_effect | 35228.0ms
| NamedSoundEffect | named_sound_effect | 35231.0ms
| NamedSoundEffect | named_sound_effect | 35233.0ms
| NamedSoundEffect | named_sound_effect | 35235.0ms
| NamedSoundEffect | named_sound_effect | 35237.0ms
| NamedSoundEffect | named_sound_effect | 35239.0ms
| NamedSoundEffect | named_sound_effect | 35353.0ms
| NamedSoundEffect | named_sound_effect | 35355.0ms
| NamedSoundEffect | named_sound_effect | 35360.0ms
| NamedSoundEffect | named_sound_effect | 35410.0ms
| EntityTeleport | entity_teleport | 35451.0ms
| NamedSoundEffect | named_sound_effect | 35454.0ms
| NamedSoundEffect | named_sound_effect | 35503.0ms
| NamedSoundEffect | named_sound_effect | 35540.0ms
| NamedSoundEffect | named_sound_effect | 35543.0ms
| NamedSoundEffect | named_sound_effect | 35601.0ms
| NamedSoundEffect | named_sound_effect | 35651.0ms
| NamedSoundEffect | named_sound_effect | 35678.0ms
| NamedSoundEffect | named_sound_effect | 35740.0ms
| NamedSoundEffect | named_sound_effect | 35742.0ms
| NamedSoundEffect | named_sound_effect | 35787.0ms
| NamedSoundEffect | named_sound_effect | 35834.0ms
| NamedSoundEffect | named_sound_effect | 35836.0ms
| NamedSoundEffect | named_sound_effect | 35867.0ms
| NamedSoundEffect | named_sound_effect | 35912.0ms
| NamedSoundEffect | named_sound_effect | 35996.0ms
| PlayerInfo | player_info | 35998.0ms
| NamedSoundEffect | named_sound_effect | 36082.0ms
| NamedSoundEffect | named_sound_effect | 36084.0ms
| NamedSoundEffect | named_sound_effect | 36090.0ms
| EntityTeleport | entity_teleport | 36092.0ms
| NamedSoundEffect | named_sound_effect | 36094.0ms
| NamedSoundEffect | named_sound_effect | 36299.0ms
| EntityLook | entity_look | 36301.0ms
| NamedSoundEffect | named_sound_effect | 36304.0ms
| NamedSoundEffect | named_sound_effect | 36306.0ms
| NamedSoundEffect | named_sound_effect | 36308.0ms
| NamedSoundEffect | named_sound_effect | 36312.0ms
| NamedSoundEffect | named_sound_effect | 36484.0ms
| NamedSoundEffect | named_sound_effect | 36486.0ms
| NamedSoundEffect | named_sound_effect | 36491.0ms
| NamedSoundEffect | named_sound_effect | 36493.0ms
| NamedSoundEffect | named_sound_effect | 36633.0ms
| NamedSoundEffect | named_sound_effect | 36635.0ms
| NamedSoundEffect | named_sound_effect | 36638.0ms
| PlayerInfo | player_info | 36923.0ms
| NamedSoundEffect | named_sound_effect | 36926.0ms
| Chat | chat | 37560.0ms
| PlayerInfo | player_info | 37564.0ms
| NamedEntitySpawn | named_entity_spawn | 37567.0ms
| EntityMetadata | entity_metadata | 37570.0ms
| EntityUpdateAttributes | entity_update_attributes | 37573.0ms
| EntityTeleport | entity_teleport | 37575.0ms
| EntityUpdateAttributes | entity_update_attributes | 37578.0ms
| NamedSoundEffect | named_sound_effect | 37581.0ms
| NamedSoundEffect | named_sound_effect | 37584.0ms
| NamedSoundEffect | named_sound_effect | 37587.0ms
| NamedSoundEffect | named_sound_effect | 37590.0ms
| EntityTeleport | entity_teleport | 37592.0ms
| NamedSoundEffect | named_sound_effect | 37597.0ms
| NamedSoundEffect | named_sound_effect | 37600.0ms
| NamedSoundEffect | named_sound_effect | 37602.0ms
| NamedSoundEffect | named_sound_effect | 37605.0ms
| NamedSoundEffect | named_sound_effect | 37608.0ms
| NamedSoundEffect | named_sound_effect | 37613.0ms
| NamedSoundEffect | named_sound_effect | 37617.0ms
| NamedSoundEffect | named_sound_effect | 37620.0ms
| NamedSoundEffect | named_sound_effect | 37623.0ms
| NamedSoundEffect | named_sound_effect | 37626.0ms
| NamedSoundEffect | named_sound_effect | 37629.0ms
| NamedSoundEffect | named_sound_effect | 38364.0ms
| NamedSoundEffect | named_sound_effect | 38368.0ms
| NamedSoundEffect | named_sound_effect | 38371.0ms
| NamedSoundEffect | named_sound_effect | 38373.0ms
| NamedSoundEffect | named_sound_effect | 38377.0ms
| NamedSoundEffect | named_sound_effect | 38379.0ms
| NamedSoundEffect | named_sound_effect | 38381.0ms
| NamedSoundEffect | named_sound_effect | 38386.0ms
| NamedSoundEffect | named_sound_effect | 38388.0ms
| NamedSoundEffect | named_sound_effect | 38391.0ms
| NamedSoundEffect | named_sound_effect | 38393.0ms
| NamedSoundEffect | named_sound_effect | 38397.0ms
| NamedSoundEffect | named_sound_effect | 38399.0ms
| NamedSoundEffect | named_sound_effect | 38404.0ms
| NamedSoundEffect | named_sound_effect | 38407.0ms
| NamedSoundEffect | named_sound_effect | 38410.0ms
| NamedSoundEffect | named_sound_effect | 38417.0ms
| NamedSoundEffect | named_sound_effect | 38420.0ms
| NamedSoundEffect | named_sound_effect | 38423.0ms
| NamedSoundEffect | named_sound_effect | 38428.0ms
| NamedSoundEffect | named_sound_effect | 38431.0ms
| NamedSoundEffect | named_sound_effect | 38434.0ms
| NamedSoundEffect | named_sound_effect | 38436.0ms
| NamedSoundEffect | named_sound_effect | 38440.0ms
| NamedSoundEffect | named_sound_effect | 38443.0ms
| NamedSoundEffect | named_sound_effect | 38448.0ms
| NamedSoundEffect | named_sound_effect | 38450.0ms
| NamedSoundEffect | named_sound_effect | 38453.0ms
| NamedSoundEffect | named_sound_effect | 38456.0ms
| NamedSoundEffect | named_sound_effect | 38459.0ms
| NamedSoundEffect | named_sound_effect | 38462.0ms
| NamedSoundEffect | named_sound_effect | 39087.0ms
| NamedSoundEffect | named_sound_effect | 39090.0ms
| NamedSoundEffect | named_sound_effect | 39093.0ms
| NamedSoundEffect | named_sound_effect | 39096.0ms
| NamedSoundEffect | named_sound_effect | 39098.0ms
| NamedSoundEffect | named_sound_effect | 39103.0ms
| NamedSoundEffect | named_sound_effect | 39106.0ms
| NamedSoundEffect | named_sound_effect | 39109.0ms
| NamedSoundEffect | named_sound_effect | 39111.0ms
| NamedSoundEffect | named_sound_effect | 39114.0ms
| NamedSoundEffect | named_sound_effect | 39117.0ms
| NamedSoundEffect | named_sound_effect | 39121.0ms
| NamedSoundEffect | named_sound_effect | 39124.0ms
| NamedSoundEffect | named_sound_effect | 39126.0ms
| NamedSoundEffect | named_sound_effect | 39128.0ms
| NamedSoundEffect | named_sound_effect | 39131.0ms
| NamedSoundEffect | named_sound_effect | 39134.0ms
| NamedSoundEffect | named_sound_effect | 39139.0ms
| NamedSoundEffect | named_sound_effect | 39141.0ms
| NamedSoundEffect | named_sound_effect | 39484.0ms
| NamedSoundEffect | named_sound_effect | 39487.0ms
| NamedSoundEffect | named_sound_effect | 39489.0ms
| NamedSoundEffect | named_sound_effect | 39494.0ms
| NamedSoundEffect | named_sound_effect | 39497.0ms
| NamedSoundEffect | named_sound_effect | 39499.0ms
| NamedSoundEffect | named_sound_effect | 39502.0ms
| NamedSoundEffect | named_sound_effect | 39504.0ms
| NamedSoundEffect | named_sound_effect | 39508.0ms
| NamedSoundEffect | named_sound_effect | 39512.0ms
| NamedSoundEffect | named_sound_effect | 39729.0ms
| NamedSoundEffect | named_sound_effect | 39731.0ms
| NamedSoundEffect | named_sound_effect | 39734.0ms
| NamedSoundEffect | named_sound_effect | 39737.0ms
| NamedSoundEffect | named_sound_effect | 39740.0ms
| NamedSoundEffect | named_sound_effect | 39743.0ms
| NamedSoundEffect | named_sound_effect | 39747.0ms
| NamedSoundEffect | named_sound_effect | 39881.0ms
| NamedSoundEffect | named_sound_effect | 39886.0ms
| NamedSoundEffect | named_sound_effect | 39889.0ms
| NamedSoundEffect | named_sound_effect | 39892.0ms
| NamedSoundEffect | named_sound_effect | 39895.0ms
| NamedSoundEffect | named_sound_effect | 39995.0ms
| NamedSoundEffect | named_sound_effect | 39998.0ms
| NamedSoundEffect | named_sound_effect | 40001.0ms
| NamedSoundEffect | named_sound_effect | 40078.0ms
| NamedSoundEffect | named_sound_effect | 40142.0ms
| NamedSoundEffect | named_sound_effect | 40303.0ms
| NamedSoundEffect | named_sound_effect | 40306.0ms
| NamedSoundEffect | named_sound_effect | 40308.0ms
| NamedSoundEffect | named_sound_effect | 40313.0ms
| NamedSoundEffect | named_sound_effect | 40316.0ms
| NamedSoundEffect | named_sound_effect | 40469.0ms
| NamedSoundEffect | named_sound_effect | 40472.0ms
| NamedSoundEffect | named_sound_effect | 40476.0ms
| NamedSoundEffect | named_sound_effect | 40509.0ms
| NamedSoundEffect | named_sound_effect | 40557.0ms
| NamedSoundEffect | named_sound_effect | 40560.0ms
| NamedSoundEffect | named_sound_effect | 40563.0ms
| NamedSoundEffect | named_sound_effect | 40655.0ms
| NamedSoundEffect | named_sound_effect | 40707.0ms
| NamedSoundEffect | named_sound_effect | 40778.0ms
| NamedSoundEffect | named_sound_effect | 40780.0ms
| NamedSoundEffect | named_sound_effect | 40782.0ms
| NamedSoundEffect | named_sound_effect | 40840.0ms
| NamedSoundEffect | named_sound_effect | 40842.0ms
| NamedSoundEffect | named_sound_effect | 40847.0ms
| NamedSoundEffect | named_sound_effect | 40940.0ms
| NamedSoundEffect | named_sound_effect | 40943.0ms
| NamedSoundEffect | named_sound_effect | 41377.0ms
| NamedSoundEffect | named_sound_effect | 41380.0ms
| NamedSoundEffect | named_sound_effect | 41382.0ms
| EntityTeleport | entity_teleport | 41384.0ms
| NamedSoundEffect | named_sound_effect | 41387.0ms
| NamedSoundEffect | named_sound_effect | 41390.0ms
| NamedSoundEffect | named_sound_effect | 41393.0ms
| NamedSoundEffect | named_sound_effect | 41395.0ms
| NamedSoundEffect | named_sound_effect | 41397.0ms
| NamedSoundEffect | named_sound_effect | 41402.0ms
| NamedSoundEffect | named_sound_effect | 41405.0ms
| NamedSoundEffect | named_sound_effect | 41408.0ms
| NamedSoundEffect | named_sound_effect | 41642.0ms
| NamedSoundEffect | named_sound_effect | 41644.0ms
| NamedSoundEffect | named_sound_effect | 41647.0ms
| NamedSoundEffect | named_sound_effect | 41649.0ms
| EntityTeleport | entity_teleport | 41652.0ms
| NamedSoundEffect | named_sound_effect | 41656.0ms
| NamedSoundEffect | named_sound_effect | 41662.0ms
| NamedSoundEffect | named_sound_effect | 41664.0ms
| NamedSoundEffect | named_sound_effect | 41667.0ms
| NamedSoundEffect | named_sound_effect | 42518.0ms
| NamedSoundEffect | named_sound_effect | 42521.0ms
| NamedSoundEffect | named_sound_effect | 42524.0ms
| NamedSoundEffect | named_sound_effect | 42529.0ms
| NamedSoundEffect | named_sound_effect | 42531.0ms
| NamedSoundEffect | named_sound_effect | 42533.0ms
| NamedSoundEffect | named_sound_effect | 42535.0ms
| NamedSoundEffect | named_sound_effect | 42538.0ms
| NamedSoundEffect | named_sound_effect | 42540.0ms
| NamedSoundEffect | named_sound_effect | 42544.0ms
| NamedSoundEffect | named_sound_effect | 42547.0ms
| NamedSoundEffect | named_sound_effect | 42549.0ms
| NamedSoundEffect | named_sound_effect | 42552.0ms
| NamedSoundEffect | named_sound_effect | 42554.0ms
| NamedSoundEffect | named_sound_effect | 42557.0ms
| NamedSoundEffect | named_sound_effect | 42561.0ms
| NamedSoundEffect | named_sound_effect | 42564.0ms
| NamedSoundEffect | named_sound_effect | 42566.0ms
| NamedSoundEffect | named_sound_effect | 42569.0ms
| NamedSoundEffect | named_sound_effect | 42571.0ms
| NamedSoundEffect | named_sound_effect | 42573.0ms
| NamedSoundEffect | named_sound_effect | 42578.0ms
| NamedSoundEffect | named_sound_effect | 42580.0ms
| NamedSoundEffect | named_sound_effect | 43423.0ms
| NamedSoundEffect | named_sound_effect | 43427.0ms
| NamedSoundEffect | named_sound_effect | 43430.0ms
| NamedSoundEffect | named_sound_effect | 43433.0ms
| NamedSoundEffect | named_sound_effect | 43438.0ms
| EntityLook | entity_look | 43441.0ms
| NamedSoundEffect | named_sound_effect | 43444.0ms
| NamedSoundEffect | named_sound_effect | 43447.0ms
| NamedSoundEffect | named_sound_effect | 43450.0ms
| NamedSoundEffect | named_sound_effect | 43454.0ms
| NamedSoundEffect | named_sound_effect | 43459.0ms
| NamedSoundEffect | named_sound_effect | 43463.0ms
| NamedSoundEffect | named_sound_effect | 43466.0ms
| NamedSoundEffect | named_sound_effect | 43470.0ms
| NamedSoundEffect | named_sound_effect | 43473.0ms
| NamedSoundEffect | named_sound_effect | 43476.0ms
| NamedSoundEffect | named_sound_effect | 43481.0ms
| NamedSoundEffect | named_sound_effect | 43484.0ms
| NamedSoundEffect | named_sound_effect | 43488.0ms
| NamedSoundEffect | named_sound_effect | 43491.0ms
| NamedSoundEffect | named_sound_effect | 43495.0ms
| NamedSoundEffect | named_sound_effect | 43498.0ms
| NamedSoundEffect | named_sound_effect | 43503.0ms
| NamedSoundEffect | named_sound_effect | 43506.0ms
| NamedSoundEffect | named_sound_effect | 44291.0ms
| NamedSoundEffect | named_sound_effect | 44293.0ms
| NamedSoundEffect | named_sound_effect | 44296.0ms
| NamedSoundEffect | named_sound_effect | 44299.0ms
| NamedSoundEffect | named_sound_effect | 44301.0ms
| NamedSoundEffect | named_sound_effect | 44306.0ms
| NamedSoundEffect | named_sound_effect | 44309.0ms
| NamedSoundEffect | named_sound_effect | 44311.0ms
| NamedSoundEffect | named_sound_effect | 44314.0ms
| NamedSoundEffect | named_sound_effect | 44317.0ms
| NamedSoundEffect | named_sound_effect | 44319.0ms
| NamedSoundEffect | named_sound_effect | 44324.0ms
| NamedSoundEffect | named_sound_effect | 44327.0ms
| NamedSoundEffect | named_sound_effect | 44329.0ms
| NamedSoundEffect | named_sound_effect | 44331.0ms
| NamedSoundEffect | named_sound_effect | 44334.0ms
| NamedSoundEffect | named_sound_effect | 44336.0ms
| NamedSoundEffect | named_sound_effect | 44342.0ms
| NamedSoundEffect | named_sound_effect | 44345.0ms
| NamedSoundEffect | named_sound_effect | 44348.0ms
| NamedSoundEffect | named_sound_effect | 44350.0ms
| NamedSoundEffect | named_sound_effect | 44352.0ms
| NamedSoundEffect | named_sound_effect | 44355.0ms
| NamedSoundEffect | named_sound_effect | 44908.0ms
| NamedSoundEffect | named_sound_effect | 44910.0ms
| NamedSoundEffect | named_sound_effect | 44913.0ms
| NamedSoundEffect | named_sound_effect | 44915.0ms
| NamedSoundEffect | named_sound_effect | 44920.0ms
| NamedSoundEffect | named_sound_effect | 44923.0ms
| NamedSoundEffect | named_sound_effect | 44925.0ms
| NamedSoundEffect | named_sound_effect | 44927.0ms
| NamedSoundEffect | named_sound_effect | 44930.0ms
| NamedSoundEffect | named_sound_effect | 44933.0ms
| NamedSoundEffect | named_sound_effect | 44937.0ms
| NamedSoundEffect | named_sound_effect | 44940.0ms
| NamedSoundEffect | named_sound_effect | 44942.0ms
| NamedSoundEffect | named_sound_effect | 44944.0ms
| NamedSoundEffect | named_sound_effect | 44946.0ms
| NamedSoundEffect | named_sound_effect | 44948.0ms
| NamedSoundEffect | named_sound_effect | 45443.0ms
| NamedSoundEffect | named_sound_effect | 45446.0ms
| NamedSoundEffect | named_sound_effect | 45449.0ms
| Difficulty | difficulty | 45451.0ms
| NamedSoundEffect | named_sound_effect | 45454.0ms
| SpawnEntityLiving | spawn_entity_living | 45457.0ms
| EntityMetadata | entity_metadata | 45461.0ms
| EntityUpdateAttributes | entity_update_attributes | 45463.0ms
| EntityUpdateAttributes | entity_update_attributes | 45479.0ms
| NamedSoundEffect | named_sound_effect | 45482.0ms
| NamedSoundEffect | named_sound_effect | 45484.0ms
| MultiBlockChange | multi_block_change | 45489.0ms
| EntityTeleport | entity_teleport | 45491.0ms
| NamedSoundEffect | named_sound_effect | 45494.0ms
| NamedSoundEffect | named_sound_effect | 45506.0ms
| NamedSoundEffect | named_sound_effect | 45508.0ms
| NamedSoundEffect | named_sound_effect | 45510.0ms
| NamedSoundEffect | named_sound_effect | 45513.0ms
| NamedSoundEffect | named_sound_effect | 45515.0ms
| NamedSoundEffect | named_sound_effect | 45519.0ms
| NamedSoundEffect | named_sound_effect | 45522.0ms
| WorldParticles | world_particles | 46242.0ms
| WorldParticles | world_particles | 46244.0ms
| WorldParticles | world_particles | 46249.0ms
| WorldParticles | world_particles | 46251.0ms
| WorldParticles | world_particles | 46254.0ms
| WorldParticles | world_particles | 46256.0ms
| WorldParticles | world_particles | 46258.0ms
| WorldParticles | world_particles | 46260.0ms
| WorldParticles | world_particles | 46265.0ms
| WorldParticles | world_particles | 46267.0ms
| WorldParticles | world_particles | 46270.0ms
| WorldParticles | world_particles | 46272.0ms
| NamedSoundEffect | named_sound_effect | 46274.0ms
| KeepAlive | keep_alive | 46277.0ms
| NamedSoundEffect | named_sound_effect | 46280.0ms
| EntityLook | entity_look | 46282.0ms
| NamedSoundEffect | named_sound_effect | 46285.0ms
| NamedSoundEffect | named_sound_effect | 46287.0ms
| NamedSoundEffect | named_sound_effect | 46290.0ms
| NamedSoundEffect | named_sound_effect | 46292.0ms
| NamedSoundEffect | named_sound_effect | 46295.0ms
| NamedSoundEffect | named_sound_effect | 46299.0ms
| NamedSoundEffect | named_sound_effect | 46301.0ms
| NamedSoundEffect | named_sound_effect | 46304.0ms
| NamedSoundEffect | named_sound_effect | 46306.0ms
| NamedSoundEffect | named_sound_effect | 46309.0ms
| EntityTeleport | entity_teleport | 46312.0ms
| NamedSoundEffect | named_sound_effect | 46314.0ms
| NamedSoundEffect | named_sound_effect | 46318.0ms
| NamedSoundEffect | named_sound_effect | 46321.0ms
| NamedSoundEffect | named_sound_effect | 46324.0ms
| NamedSoundEffect | named_sound_effect | 46327.0ms
| NamedSoundEffect | named_sound_effect | 47193.0ms
| NamedSoundEffect | named_sound_effect | 47198.0ms
| NamedSoundEffect | named_sound_effect | 47201.0ms
| NamedSoundEffect | named_sound_effect | 47204.0ms
| NamedSoundEffect | named_sound_effect | 47207.0ms
| NamedSoundEffect | named_sound_effect | 47218.0ms
| EntityTeleport | entity_teleport | 47221.0ms
| NamedSoundEffect | named_sound_effect | 47224.0ms
| NamedSoundEffect | named_sound_effect | 47228.0ms
| NamedSoundEffect | named_sound_effect | 47231.0ms
| NamedSoundEffect | named_sound_effect | 47234.0ms
| NamedSoundEffect | named_sound_effect | 47237.0ms
| NamedSoundEffect | named_sound_effect | 47239.0ms
| NamedSoundEffect | named_sound_effect | 47241.0ms
| Title | title | 47244.0ms
| NamedSoundEffect | named_sound_effect | 47247.0ms
| NamedSoundEffect | named_sound_effect | 47249.0ms
| NamedSoundEffect | named_sound_effect | 47251.0ms
| NamedSoundEffect | named_sound_effect | 47253.0ms
| NamedSoundEffect | named_sound_effect | 47256.0ms
| NamedSoundEffect | named_sound_effect | 47258.0ms
| NamedSoundEffect | named_sound_effect | 47263.0ms
| Title | title | 47265.0ms
| NamedSoundEffect | named_sound_effect | 47268.0ms
| NamedSoundEffect | named_sound_effect | 47271.0ms
| GameStateChange | game_state_change | 47273.0ms
| NamedSoundEffect | named_sound_effect | 47275.0ms
| GameStateChange | game_state_change | 47277.0ms
| GameStateChange | game_state_change | 47282.0ms
| NamedSoundEffect | named_sound_effect | 47284.0ms
| NamedSoundEffect | named_sound_effect | 47286.0ms
| NamedSoundEffect | named_sound_effect | 47288.0ms
| NamedSoundEffect | named_sound_effect | 47291.0ms
| PlayerInfo | player_info | 47293.0ms
| PlayerInfo | player_info | 47297.0ms
| PlayerInfo | player_info | 47300.0ms
| Abilities | abilities | 47301.0ms
| PlayerInfo | player_info | 47304.0ms
| GameStateChange | game_state_change | 47306.0ms
| Abilities | abilities | 47308.0ms
| Chat | chat | 47310.0ms
| PlayerInfo | player_info | 47312.0ms
| PlayerInfo | player_info | 47316.0ms
| PlayerInfo | player_info | 47318.0ms
| PlayerInfo | player_info | 47320.0ms
| PlayerInfo | player_info | 47322.0ms
| PlayerInfo | player_info | 47327.0ms
| PlayerInfo | player_info | 47329.0ms
| GameStateChange | game_state_change | 47331.0ms
| Experience | experience | 47333.0ms
| GameStateChange | game_state_change | 47335.0ms
| NamedSoundEffect | named_sound_effect | 47338.0ms
| NamedSoundEffect | named_sound_effect | 47342.0ms
| NamedSoundEffect | named_sound_effect | 47345.0ms
| GameStateChange | game_state_change | 47347.0ms
| NamedSoundEffect | named_sound_effect | 47349.0ms
| GameStateChange | game_state_change | 49182.0ms
| NamedSoundEffect | named_sound_effect | 49185.0ms
| GameStateChange | game_state_change | 49187.0ms
| NamedSoundEffect | named_sound_effect | 49189.0ms
| GameStateChange | game_state_change | 49191.0ms
| NamedSoundEffect | named_sound_effect | 49194.0ms
| GameStateChange | game_state_change | 49196.0ms
| NamedSoundEffect | named_sound_effect | 49199.0ms
| GameStateChange | game_state_change | 49201.0ms
| NamedSoundEffect | named_sound_effect | 49203.0ms
| NamedSoundEffect | named_sound_effect | 49208.0ms
| GameStateChange | game_state_change | 49210.0ms
| NamedSoundEffect | named_sound_effect | 49212.0ms
| NamedSoundEffect | named_sound_effect | 49214.0ms
| GameStateChange | game_state_change | 49217.0ms
| GameStateChange | game_state_change | 49219.0ms
| NamedSoundEffect | named_sound_effect | 49221.0ms
| NamedSoundEffect | named_sound_effect | 49225.0ms
| GameStateChange | game_state_change | 49227.0ms
| NamedSoundEffect | named_sound_effect | 49230.0ms
| GameStateChange | game_state_change | 49232.0ms
| NamedSoundEffect | named_sound_effect | 49234.0ms
| GameStateChange | game_state_change | 49236.0ms
| NamedSoundEffect | named_sound_effect | 49239.0ms
| GameStateChange | game_state_change | 49241.0ms
| NamedSoundEffect | named_sound_effect | 49244.0ms
| NamedSoundEffect | named_sound_effect | 49246.0ms
| GameStateChange | game_state_change | 49248.0ms
| NamedSoundEffect | named_sound_effect | 49250.0ms
| NamedSoundEffect | named_sound_effect | 49254.0ms
| NamedSoundEffect | named_sound_effect | 49257.0ms
| GameStateChange | game_state_change | 49259.0ms
| GameStateChange | game_state_change | 49261.0ms
| NamedSoundEffect | named_sound_effect | 49263.0ms
| GameStateChange | game_state_change | 49265.0ms
| GameStateChange | game_state_change | 49269.0ms
| GameStateChange | game_state_change | 49272.0ms
| NamedSoundEffect | named_sound_effect | 49274.0ms
| GameStateChange | game_state_change | 49276.0ms
| NamedSoundEffect | named_sound_effect | 49279.0ms
| NamedSoundEffect | named_sound_effect | 49283.0ms
| NamedSoundEffect | named_sound_effect | 49286.0ms
| NamedSoundEffect | named_sound_effect | 49288.0ms
| GameStateChange | game_state_change | 49289.0ms
| NamedSoundEffect | named_sound_effect | 49292.0ms
| GameStateChange | game_state_change | 49294.0ms
| GameStateChange | game_state_change | 49298.0ms
| NamedSoundEffect | named_sound_effect | 49301.0ms
| GameStateChange | game_state_change | 49302.0ms
| NamedSoundEffect | named_sound_effect | 49305.0ms
| NamedSoundEffect | named_sound_effect | 49307.0ms
| NamedSoundEffect | named_sound_effect | 49309.0ms
| GameStateChange | game_state_change | 49310.0ms
| NamedSoundEffect | named_sound_effect | 49313.0ms
| GameStateChange | game_state_change | 49316.0ms
| NamedSoundEffect | named_sound_effect | 49318.0ms
| GameStateChange | game_state_change | 49320.0ms
| NamedSoundEffect | named_sound_effect | 49323.0ms
| NamedSoundEffect | named_sound_effect | 49327.0ms
| GameStateChange | game_state_change | 49329.0ms
| GameStateChange | game_state_change | 49331.0ms
| NamedSoundEffect | named_sound_effect | 49334.0ms
| NamedSoundEffect | named_sound_effect | 49336.0ms
| GameStateChange | game_state_change | 49337.0ms
| NamedSoundEffect | named_sound_effect | 49340.0ms
| GameStateChange | game_state_change | 49342.0ms
| GameStateChange | game_state_change | 49345.0ms
| NamedSoundEffect | named_sound_effect | 49348.0ms
| NamedSoundEffect | named_sound_effect | 49350.0ms
| GameStateChange | game_state_change | 49352.0ms
| NamedSoundEffect | named_sound_effect | 49354.0ms
| NamedSoundEffect | named_sound_effect | 49359.0ms
| GameStateChange | game_state_change | 49361.0ms
| NamedSoundEffect | named_sound_effect | 49363.0ms
| NamedSoundEffect | named_sound_effect | 49366.0ms
| GameStateChange | game_state_change | 49368.0ms
| EntityLook | entity_look | 49370.0ms
| NamedSoundEffect | named_sound_effect | 49372.0ms
| GameStateChange | game_state_change | 49374.0ms
| NamedSoundEffect | named_sound_effect | 49377.0ms
| GameStateChange | game_state_change | 49380.0ms
| GameStateChange | game_state_change | 49382.0ms
| NamedSoundEffect | named_sound_effect | 49385.0ms
| GameStateChange | game_state_change | 49387.0ms
| NamedSoundEffect | named_sound_effect | 49390.0ms
| NamedSoundEffect | named_sound_effect | 49392.0ms
| GameStateChange | game_state_change | 49394.0ms
| NamedSoundEffect | named_sound_effect | 49397.0ms
| NamedSoundEffect | named_sound_effect | 49402.0ms
| Chat | chat | 50699.0ms
| Chat | chat | 50738.0ms
| Chat | chat | 50788.0ms
| Chat | chat | 50828.0ms
| Chat | chat | 50870.0ms
| Chat | chat | 50909.0ms
| Chat | chat | 50950.0ms
| Chat | chat | 51013.0ms
| Chat | chat | 51109.0ms
| Chat | chat | 51203.0ms
| Chat | chat | 51258.0ms
| Chat | chat | 51356.0ms
| GameStateChange | game_state_change | 51359.0ms
| Advancements | advancements | 53238.0ms
| Experience | experience | 53240.0ms
| NamedSoundEffect | named_sound_effect | 53242.0ms
| NamedSoundEffect | named_sound_effect | 53245.0ms
| GameStateChange | game_state_change | 53247.0ms
| NamedSoundEffect | named_sound_effect | 53249.0ms
| GameStateChange | game_state_change | 53251.0ms
| NamedSoundEffect | named_sound_effect | 53254.0ms
| GameStateChange | game_state_change | 53256.0ms
| NamedSoundEffect | named_sound_effect | 53259.0ms
| GameStateChange | game_state_change | 53261.0ms
| GameStateChange | game_state_change | 53267.0ms
| NamedSoundEffect | named_sound_effect | 53269.0ms
| NamedSoundEffect | named_sound_effect | 53271.0ms
| GameStateChange | game_state_change | 53274.0ms
| GameStateChange | game_state_change | 53276.0ms
| NamedSoundEffect | named_sound_effect | 53279.0ms
| NamedSoundEffect | named_sound_effect | 53283.0ms
| NamedSoundEffect | named_sound_effect | 53285.0ms
| NamedSoundEffect | named_sound_effect | 53288.0ms
| GameStateChange | game_state_change | 53290.0ms
| NamedSoundEffect | named_sound_effect | 53292.0ms
| NamedSoundEffect | named_sound_effect | 53294.0ms
| GameStateChange | game_state_change | 53296.0ms
| NamedSoundEffect | named_sound_effect | 53299.0ms
| GameStateChange | game_state_change | 53301.0ms
| GameStateChange | game_state_change | 53304.0ms
| GameStateChange | game_state_change | 53306.0ms
| NamedSoundEffect | named_sound_effect | 53309.0ms
| NamedSoundEffect | named_sound_effect | 53313.0ms
| NamedSoundEffect | named_sound_effect | 53316.0ms
| GameStateChange | game_state_change | 53318.0ms
| GameStateChange | game_state_change | 53320.0ms
| NamedSoundEffect | named_sound_effect | 53323.0ms
| NamedSoundEffect | named_sound_effect | 53325.0ms
| GameStateChange | game_state_change | 53327.0ms
| GameStateChange | game_state_change | 53332.0ms
| NamedSoundEffect | named_sound_effect | 53334.0ms
| NamedSoundEffect | named_sound_effect | 53336.0ms
| NamedSoundEffect | named_sound_effect | 53339.0ms
| NamedSoundEffect | named_sound_effect | 53341.0ms
| GameStateChange | game_state_change | 53343.0ms
| NamedSoundEffect | named_sound_effect | 53345.0ms
| GameStateChange | game_state_change | 53348.0ms
| NamedSoundEffect | named_sound_effect | 53351.0ms
| GameStateChange | game_state_change | 53353.0ms
| NamedSoundEffect | named_sound_effect | 53356.0ms
| GameStateChange | game_state_change | 53358.0ms
| EntityTeleport | entity_teleport | 53361.0ms
| NamedSoundEffect | named_sound_effect | 53363.0ms
| NamedSoundEffect | named_sound_effect | 53366.0ms
| GameStateChange | game_state_change | 53369.0ms
| NamedSoundEffect | named_sound_effect | 53377.0ms
| GameStateChange | game_state_change | 53380.0ms
| GameStateChange | game_state_change | 53384.0ms
| GameStateChange | game_state_change | 53388.0ms
| NamedSoundEffect | named_sound_effect | 53392.0ms
| GameStateChange | game_state_change | 53395.0ms
| NamedSoundEffect | named_sound_effect | 53399.0ms
| NamedSoundEffect | named_sound_effect | 53402.0ms
| NamedSoundEffect | named_sound_effect | 53407.0ms
| NamedSoundEffect | named_sound_effect | 53411.0ms
| GameStateChange | game_state_change | 53413.0ms
| NamedSoundEffect | named_sound_effect | 53417.0ms
| NamedSoundEffect | named_sound_effect | 53420.0ms
| GameStateChange | game_state_change | 53423.0ms
| NamedSoundEffect | named_sound_effect | 53426.0ms
| GameStateChange | game_state_change | 53429.0ms
| NamedSoundEffect | named_sound_effect | 53433.0ms
| GameStateChange | game_state_change | 53436.0ms
| GameStateChange | game_state_change | 53439.0ms
| NamedSoundEffect | named_sound_effect | 53442.0ms
| GameStateChange | game_state_change | 53445.0ms
| NamedSoundEffect | named_sound_effect | 53449.0ms
| NamedSoundEffect | named_sound_effect | 53452.0ms
| NamedSoundEffect | named_sound_effect | 53456.0ms
| GameStateChange | game_state_change | 53459.0ms
| NamedSoundEffect | named_sound_effect | 53464.0ms
| GameStateChange | game_state_change | 53472.0ms
| NamedSoundEffect | named_sound_effect | 53475.0ms
| GameStateChange | game_state_change | 53477.0ms
| NamedSoundEffect | named_sound_effect | 53480.0ms
| GameStateChange | game_state_change | 53485.0ms
| NamedSoundEffect | named_sound_effect | 53488.0ms
| NamedSoundEffect | named_sound_effect | 53492.0ms
| GameStateChange | game_state_change | 53495.0ms
| NamedSoundEffect | named_sound_effect | 53498.0ms
| NamedSoundEffect | named_sound_effect | 53500.0ms
| GameStateChange | game_state_change | 53503.0ms
| EntityTeleport | entity_teleport | 53505.0ms
| GameStateChange | game_state_change | 53507.0ms
| NamedSoundEffect | named_sound_effect | 53511.0ms
| NamedSoundEffect | named_sound_effect | 53514.0ms
| GameStateChange | game_state_change | 53517.0ms
| GameStateChange | game_state_change | 53520.0ms
| NamedSoundEffect | named_sound_effect | 53522.0ms
| NamedSoundEffect | named_sound_effect | 53527.0ms
| GameStateChange | game_state_change | 53529.0ms
| NamedSoundEffect | named_sound_effect | 53532.0ms
| GameStateChange | game_state_change | 53534.0ms
| NamedSoundEffect | named_sound_effect | 53537.0ms
| NamedSoundEffect | named_sound_effect | 53539.0ms
| NamedSoundEffect | named_sound_effect | 53543.0ms
| GameStateChange | game_state_change | 53545.0ms
| GameStateChange | game_state_change | 53548.0ms
| NamedSoundEffect | named_sound_effect | 53551.0ms
| GameStateChange | game_state_change | 53553.0ms
| NamedSoundEffect | named_sound_effect | 53555.0ms
| NamedSoundEffect | named_sound_effect | 53560.0ms
| GameStateChange | game_state_change | 53562.0ms
| GameStateChange | game_state_change | 53565.0ms
| NamedSoundEffect | named_sound_effect | 53567.0ms
| NamedSoundEffect | named_sound_effect | 53570.0ms
| GameStateChange | game_state_change | 53571.0ms
| EntityLook | entity_look | 53573.0ms
| EntityTeleport | entity_teleport | 53576.0ms
| NamedSoundEffect | named_sound_effect | 53578.0ms
| NamedSoundEffect | named_sound_effect | 53580.0ms
| GameStateChange | game_state_change | 53582.0ms
| NamedSoundEffect | named_sound_effect | 53585.0ms
| NamedSoundEffect | named_sound_effect | 53589.0ms
| GameStateChange | game_state_change | 53591.0ms
| NamedSoundEffect | named_sound_effect | 53594.0ms
| GameStateChange | game_state_change | 53596.0ms
| NamedSoundEffect | named_sound_effect | 53598.0ms
| GameStateChange | game_state_change | 53600.0ms
| GameStateChange | game_state_change | 53605.0ms
| NamedSoundEffect | named_sound_effect | 53610.0ms
| GameStateChange | game_state_change | 53613.0ms
| NamedSoundEffect | named_sound_effect | 53615.0ms
| NamedSoundEffect | named_sound_effect | 53617.0ms
| NamedSoundEffect | named_sound_effect | 53619.0ms
| GameStateChange | game_state_change | 53621.0ms
| NamedSoundEffect | named_sound_effect | 53624.0ms
| GameStateChange | game_state_change | 53626.0ms
| NamedSoundEffect | named_sound_effect | 53629.0ms
| NamedSoundEffect | named_sound_effect | 53631.0ms
| NamedSoundEffect | named_sound_effect | 53634.0ms
| NamedSoundEffect | named_sound_effect | 53638.0ms
| NamedSoundEffect | named_sound_effect | 53641.0ms
| NamedSoundEffect | named_sound_effect | 53643.0ms
| NamedSoundEffect | named_sound_effect | 53646.0ms
| NamedSoundEffect | named_sound_effect | 53648.0ms
| NamedSoundEffect | named_sound_effect | 53651.0ms
| NamedSoundEffect | named_sound_effect | 53656.0ms
| NamedSoundEffect | named_sound_effect | 53660.0ms
| NamedSoundEffect | named_sound_effect | 53665.0ms
| NamedSoundEffect | named_sound_effect | 53667.0ms
| NamedSoundEffect | named_sound_effect | 53670.0ms
| NamedSoundEffect | named_sound_effect | 53673.0ms
| NamedSoundEffect | named_sound_effect | 53678.0ms
| NamedSoundEffect | named_sound_effect | 53681.0ms
| NamedSoundEffect | named_sound_effect | 53684.0ms
| NamedSoundEffect | named_sound_effect | 53687.0ms
| NamedSoundEffect | named_sound_effect | 53691.0ms
| EntityTeleport | entity_teleport | 56684.0ms
| NamedSoundEffect | named_sound_effect | 56687.0ms
| NamedSoundEffect | named_sound_effect | 56690.0ms
| NamedSoundEffect | named_sound_effect | 56692.0ms
| NamedSoundEffect | named_sound_effect | 56694.0ms
| NamedSoundEffect | named_sound_effect | 56697.0ms
| NamedSoundEffect | named_sound_effect | 56702.0ms
| NamedSoundEffect | named_sound_effect | 56704.0ms
| NamedSoundEffect | named_sound_effect | 56707.0ms
| NamedSoundEffect | named_sound_effect | 56710.0ms
| NamedSoundEffect | named_sound_effect | 56713.0ms
| NamedSoundEffect | named_sound_effect | 56715.0ms
| NamedSoundEffect | named_sound_effect | 56720.0ms
| NamedSoundEffect | named_sound_effect | 56723.0ms
| NamedSoundEffect | named_sound_effect | 56725.0ms
| NamedSoundEffect | named_sound_effect | 56728.0ms
| NamedSoundEffect | named_sound_effect | 56731.0ms
| NamedSoundEffect | named_sound_effect | 56733.0ms
| NamedSoundEffect | named_sound_effect | 56738.0ms
| NamedSoundEffect | named_sound_effect | 56741.0ms
| NamedSoundEffect | named_sound_effect | 56743.0ms
| NamedSoundEffect | named_sound_effect | 56747.0ms
| NamedSoundEffect | named_sound_effect | 56749.0ms
| NamedSoundEffect | named_sound_effect | 56753.0ms
| NamedSoundEffect | named_sound_effect | 56756.0ms
| NamedSoundEffect | named_sound_effect | 56759.0ms
| NamedSoundEffect | named_sound_effect | 56762.0ms
| NamedSoundEffect | named_sound_effect | 56765.0ms
| NamedSoundEffect | named_sound_effect | 56767.0ms
| NamedSoundEffect | named_sound_effect | 56769.0ms
| NamedSoundEffect | named_sound_effect | 56774.0ms
| NamedSoundEffect | named_sound_effect | 56777.0ms
| NamedSoundEffect | named_sound_effect | 56780.0ms
| NamedSoundEffect | named_sound_effect | 56782.0ms
| NamedSoundEffect | named_sound_effect | 56785.0ms
| NamedSoundEffect | named_sound_effect | 56787.0ms
| NamedSoundEffect | named_sound_effect | 56792.0ms
| NamedSoundEffect | named_sound_effect | 56795.0ms
| NamedSoundEffect | named_sound_effect | 56798.0ms
| NamedSoundEffect | named_sound_effect | 56801.0ms
| NamedSoundEffect | named_sound_effect | 56803.0ms
| NamedSoundEffect | named_sound_effect | 56806.0ms
| NamedSoundEffect | named_sound_effect | 56810.0ms
| NamedSoundEffect | named_sound_effect | 56813.0ms
| NamedSoundEffect | named_sound_effect | 56816.0ms
| NamedSoundEffect | named_sound_effect | 56819.0ms
| NamedSoundEffect | named_sound_effect | 56822.0ms
| NamedSoundEffect | named_sound_effect | 56824.0ms
| NamedSoundEffect | named_sound_effect | 56829.0ms
| NamedSoundEffect | named_sound_effect | 56831.0ms
| NamedSoundEffect | named_sound_effect | 56834.0ms
| NamedSoundEffect | named_sound_effect | 56837.0ms
| NamedSoundEffect | named_sound_effect | 56840.0ms
| NamedSoundEffect | named_sound_effect | 56842.0ms
| NamedSoundEffect | named_sound_effect | 56846.0ms
| NamedSoundEffect | named_sound_effect | 56849.0ms
| NamedSoundEffect | named_sound_effect | 56852.0ms
| NamedSoundEffect | named_sound_effect | 56855.0ms
| NamedSoundEffect | named_sound_effect | 56858.0ms
| NamedSoundEffect | named_sound_effect | 56860.0ms
| NamedSoundEffect | named_sound_effect | 56865.0ms
| NamedSoundEffect | named_sound_effect | 56891.0ms
| EntityDestroy | entity_destroy | 56895.0ms
| PlayerInfo | player_info | 56898.0ms
| Chat | chat | 58042.0ms
| EntityDestroy | entity_destroy | 58044.0ms
| PlayerInfo | player_info | 58046.0ms
| Chat | chat | 58294.0ms
| EntityDestroy | entity_destroy | 58296.0ms
| PlayerInfo | player_info | 58298.0ms
| Chat | chat | 58483.0ms
| EntityDestroy | entity_destroy | 58485.0ms
| PlayerInfo | player_info | 58487.0ms
| Chat | chat | 58574.0ms
| CloseWindow | close_window | 58577.0ms
| EntityDestroy | entity_destroy | 58579.0ms
| EntityDestroy | entity_destroy | 58582.0ms
| EntityDestroy | entity_destroy | 58584.0ms
| EntityDestroy | entity_destroy | 58588.0ms
| EntityDestroy | entity_destroy | 58591.0ms
| EntityDestroy | entity_destroy | 58593.0ms
| EntityDestroy | entity_destroy | 58595.0ms
| EntityDestroy | entity_destroy | 58597.0ms
| EntityDestroy | entity_destroy | 58599.0ms
| EntityDestroy | entity_destroy | 58604.0ms
| Abilities | abilities | 58606.0ms
| EntityUpdateAttributes | entity_update_attributes | 58608.0ms
| Respawn | respawn | 58611.0ms
| UpdateViewDistance | update_view_distance | 58613.0ms
| Position | position | 58615.0ms
| SpawnPosition | spawn_position | 58618.0ms
| Difficulty | difficulty | 58620.0ms
| Experience | experience | 58621.0ms
| WorldBorder | world_border | 58624.0ms
| SpawnPosition | spawn_position | 58626.0ms
| EntityStatus | entity_status | 58628.0ms
| UpdateViewDistance | update_view_distance | 58631.0ms
| UpdateViewPosition | update_view_position | 58633.0ms
| NamedEntitySpawn | named_entity_spawn | 58635.0ms
| EntityMetadata | entity_metadata | 58638.0ms
| EntityUpdateAttributes | entity_update_attributes | 58640.0ms
| NamedEntitySpawn | named_entity_spawn | 58643.0ms
| EntityMetadata | entity_metadata | 58646.0ms
| EntityUpdateAttributes | entity_update_attributes | 58648.0ms
| NamedEntitySpawn | named_entity_spawn | 58651.0ms
| EntityMetadata | entity_metadata | 58654.0ms
| EntityUpdateAttributes | entity_update_attributes | 58656.0ms
| NamedEntitySpawn | named_entity_spawn | 58659.0ms
| EntityMetadata | entity_metadata | 58662.0ms
| EntityUpdateAttributes | entity_update_attributes | 58664.0ms
| EntityUpdateAttributes | entity_update_attributes | 58669.0ms
| WindowItems | window_items | 58672.0ms
| SetSlot | set_slot | 58675.0ms
| Transaction | transaction | 58677.0ms
| EntityUpdateAttributes | entity_update_attributes | 58679.0ms
| UpdateHealth | update_health | 58682.0ms
| HeldItemSlot | held_item_slot | 58683.0ms
| EntityStatus | entity_status | 58685.0ms
| GameStateChange | game_state_change | 58687.0ms
| Abilities | abilities | 58690.0ms
| Chat | chat | 58779.0ms
| PlayerInfo | player_info | 58781.0ms
| NamedEntitySpawn | named_entity_spawn | 58783.0ms
| EntityMetadata | entity_metadata | 58786.0ms
| EntityUpdateAttributes | entity_update_attributes | 58788.0ms
| Chat | chat | 58988.0ms
| PlayerInfo | player_info | 58991.0ms
| NamedEntitySpawn | named_entity_spawn | 58993.0ms
| EntityMetadata | entity_metadata | 58997.0ms
| EntityUpdateAttributes | entity_update_attributes | 58999.0ms
| Chat | chat | 59202.0ms
| PlayerInfo | player_info | 59204.0ms
| NamedEntitySpawn | named_entity_spawn | 59207.0ms
| EntityMetadata | entity_metadata | 59211.0ms
| EntityUpdateAttributes | entity_update_attributes | 59213.0ms
| Chat | chat | 59446.0ms
| PlayerInfo | player_info | 59449.0ms
| NamedEntitySpawn | named_entity_spawn | 59453.0ms
| EntityMetadata | entity_metadata | 59456.0ms
| EntityUpdateAttributes | entity_update_attributes | 59459.0ms
| Chat | chat | 59855.0ms
| PlayerInfo | player_info | 59857.0ms
| NamedEntitySpawn | named_entity_spawn | 59859.0ms
| EntityMetadata | entity_metadata | 59862.0ms
| EntityUpdateAttributes | entity_update_attributes | 59864.0ms
| Chat | chat | 59983.0ms
| PlayerInfo | player_info | 59985.0ms
| NamedEntitySpawn | named_entity_spawn | 59987.0ms
| EntityMetadata | entity_metadata | 59990.0ms
| EntityUpdateAttributes | entity_update_attributes | 59993.0ms
| Chat | chat | 60238.0ms
| PlayerInfo | player_info | 60241.0ms
| NamedEntitySpawn | named_entity_spawn | 60243.0ms
| EntityMetadata | entity_metadata | 60246.0ms
| EntityUpdateAttributes | entity_update_attributes | 60248.0ms
| Chat | chat | 60348.0ms
| Advancements | advancements | 60462.0ms
| UpdateHealth | update_health | 60464.0ms
| Experience | experience | 60466.0ms
| DeclareCommands | declare_commands | 60579.0ms
| UpdateLight | update_light | 60721.0ms
| UpdateLight | update_light | 60937.0ms
| EntityTeleport | entity_teleport | 61026.0ms
| EntityTeleport | entity_teleport | 61028.0ms
| EntityTeleport | entity_teleport | 61030.0ms
| EntityTeleport | entity_teleport | 61032.0ms
| EntityTeleport | entity_teleport | 61034.0ms
| EntityTeleport | entity_teleport | 61036.0ms
| EntityTeleport | entity_teleport | 61041.0ms
| EntityTeleport | entity_teleport | 61043.0ms
| EntityTeleport | entity_teleport | 61045.0ms
| EntityTeleport | entity_teleport | 61047.0ms
| EntityTeleport | entity_teleport | 61050.0ms
| UpdateLight | update_light | 61131.0ms
| UpdateLight | update_light | 61225.0ms
| UpdateLight | update_light | 61310.0ms
| UpdateLight | update_light | 61688.0ms
| UpdateLight | update_light | 61790.0ms
| UpdateLight | update_light | 61843.0ms
| UpdateLight | update_light | 61886.0ms
| UpdateLight | update_light | 61979.0ms
| UpdateLight | update_light | 62059.0ms
| UpdateLight | update_light | 62159.0ms
| UpdateLight | update_light | 62514.0ms
| UpdateLight | update_light | 62545.0ms
| UpdateLight | update_light | 62611.0ms
| UpdateLight | update_light | 62695.0ms
| UpdateLight | update_light | 62721.0ms
| UpdateLight | update_light | 62815.0ms
| UpdateLight | update_light | 63015.0ms
| UpdateLight | update_light | 63142.0ms
| UpdateLight | update_light | 63278.0ms
| UpdateLight | update_light | 63381.0ms
| UpdateLight | update_light | 63470.0ms
| UpdateLight | update_light | 63559.0ms
| UpdateLight | update_light | 63633.0ms
| UpdateLight | update_light | 63662.0ms
| UpdateLight | update_light | 63680.0ms
| UpdateLight | update_light | 63714.0ms
| UpdateLight | update_light | 63919.0ms
| UpdateLight | update_light | 63932.0ms
| UpdateLight | update_light | 64050.0ms
| UpdateLight | update_light | 64095.0ms
| UpdateLight | update_light | 64170.0ms
| UpdateLight | update_light | 64303.0ms
| UpdateLight | update_light | 64433.0ms
| UpdateLight | update_light | 64510.0ms
| UpdateLight | update_light | 64562.0ms
| UpdateLight | update_light | 64576.0ms
| UpdateLight | update_light | 64622.0ms
| UpdateLight | update_light | 64640.0ms
| UpdateLight | update_light | 64722.0ms
| UpdateLight | update_light | 64789.0ms
| UpdateLight | update_light | 64826.0ms
| UpdateLight | update_light | 64841.0ms
| UpdateLight | update_light | 64876.0ms
| UpdateLight | update_light | 64889.0ms
| UpdateLight | update_light | 64951.0ms
| UpdateLight | update_light | 64967.0ms
| UpdateLight | update_light | 64981.0ms
| KeepAlive | keep_alive | 64999.0ms
| UpdateLight | update_light | 65003.0ms
| EntityTeleport | entity_teleport | 65020.0ms
| UpdateLight | update_light | 65023.0ms
| EntityStatus | entity_status | 65041.0ms
| EntityMetadata | entity_metadata | 65044.0ms
| UpdateLight | update_light | 65046.0ms
| UpdateLight | update_light | 65068.0ms
| UpdateLight | update_light | 65085.0ms
| UpdateLight | update_light | 65098.0ms
| UpdateLight | update_light | 65130.0ms
| UpdateLight | update_light | 65148.0ms
| UpdateLight | update_light | 65181.0ms
| UpdateLight | update_light | 65201.0ms
| UpdateLight | update_light | 65216.0ms
| UpdateLight | update_light | 65249.0ms
| UpdateLight | update_light | 65261.0ms
| UpdateLight | update_light | 65286.0ms
| UpdateLight | update_light | 65306.0ms
| UpdateLight | update_light | 65334.0ms
| EntityMetadata | entity_metadata | 65353.0ms
| EntityStatus | entity_status | 65356.0ms
| UpdateLight | update_light | 65358.0ms
| EntityMetadata | entity_metadata | 65374.0ms
| UpdateLight | update_light | 65377.0ms
| UpdateLight | update_light | 65398.0ms
| UpdateLight | update_light | 65422.0ms
| UpdateLight | update_light | 65447.0ms
| UpdateLight | update_light | 65478.0ms
| UpdateLight | update_light | 65497.0ms
| UpdateLight | update_light | 65512.0ms
| UpdateLight | update_light | 65530.0ms
| UpdateLight | update_light | 65545.0ms
| UpdateLight | update_light | 65561.0ms
| UpdateLight | update_light | 65623.0ms
| EntityMetadata | entity_metadata | 65644.0ms
| EntityStatus | entity_status | 65646.0ms
| EntityMetadata | entity_metadata | 65649.0ms
| EntityMetadata | entity_metadata | 65654.0ms
| EntityStatus | entity_status | 65656.0ms
| EntityMetadata | entity_metadata | 65659.0ms
| EntityMetadata | entity_metadata | 65661.0ms
| EntityStatus | entity_status | 65664.0ms
| EntityMetadata | entity_metadata | 65666.0ms
| EntityMetadata | entity_metadata | 65671.0ms
| EntityStatus | entity_status | 65674.0ms
| EntityMetadata | entity_metadata | 65677.0ms
| EntityDestroy | entity_destroy | 65680.0ms
| PlayerInfo | player_info | 65682.0ms
| Chat | chat | 65684.0ms
| EntityDestroy | entity_destroy | 65686.0ms
| PlayerInfo | player_info | 65691.0ms
| Chat | chat | 65693.0ms
| EntityDestroy | entity_destroy | 65695.0ms
| PlayerInfo | player_info | 65698.0ms
| Chat | chat | 65700.0ms
| EntityDestroy | entity_destroy | 65701.0ms
| PlayerInfo | player_info | 65704.0ms
| Chat | chat | 65706.0ms
| KickDisconnect | kick_disconnect | 65708.0ms
